--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-14 [台湾谴责中国围台军演并以“不升高冲突”应对 美日表达关切](/articles/voa/1011826.md)
+
 10-14 [特朗普在亚利桑那州承诺增加1万名边境巡逻人员](/articles/voa/1011827.md)
 
 10-14 [美国将向以色列提供先进导弹防御系统](/articles/voa/1011828.md)
@@ -598,6 +600,4 @@
 10-2 [美国财政部官员：美中谈判帮助避免中国对提高关税进行报复](/articles/voa/1012124.md)
 
 10-2 [中共建政周年日之际，印度藏人团体抗议中国政府和西藏人权状况](/articles/voa/1012125.md)
-
-10-2 [国际危机组织：美大选增不确定性，台北与北京应立即采取降温行动保留未来管理紧张局势的操作空间](/articles/voa/1012126.md)
 
