--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-14 [中国边境“新长城”蚕食尼泊尔领土？](/articles/nyt/1042313.md)
+
 10-14 [中国再次举行环台军演，警告赖清德](/articles/nyt/1042314.md)
 
 10-14 [中国将出台财政刺激措施：发行债券、向银行注资](/articles/nyt/1042315.md)
@@ -598,6 +600,4 @@
 7-5 [欧盟要求中国电动车企确保有能力支付税款](/articles/nyt/1042611.md)
 
 7-5 [中国互联网上的仇外言论煽动现实中的暴力？](/articles/nyt/1042612.md)
-
-7-4 [中俄是如何在中亚既竞争又合作的](/articles/nyt/1042613.md)
 
