--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-14 [韩国军方：朝鲜正准备炸毁与韩国相连的道路](/articles/voa/1011825.md)
+
 10-14 [台湾谴责中国围台军演并以“不升高冲突”应对 美日表达关切](/articles/voa/1011826.md)
 
 10-14 [特朗普在亚利桑那州承诺增加1万名边境巡逻人员](/articles/voa/1011827.md)
@@ -598,6 +600,4 @@
 10-2 [以色列：伊朗统治者发动导弹攻击是犯下“大错”；美国：初步评估显示袭击被挫败](/articles/voa/1012123.md)
 
 10-2 [美国财政部官员：美中谈判帮助避免中国对提高关税进行报复](/articles/voa/1012124.md)
-
-10-2 [中共建政周年日之际，印度藏人团体抗议中国政府和西藏人权状况](/articles/voa/1012125.md)
 
