--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-14 [地球公民金建国｜不会唱国歌就是间谍吗？](/articles/cdt/336385.md)
+
+10-14 [【网络民议】“关键是我们想好好说话您不让啊”](/articles/cdt/336390.md)
+
 10-14 [建设性意见｜明天哪只股票会涨？](/articles/cdt/336393.md)
 
 10-14 [老干体v｜地方债，终究还是中央扛下了所有](/articles/cdt/336397.md)
@@ -596,8 +600,4 @@
 9-9 [情况有点复杂｜不要再报道了！](/articles/cdt/337321.md)
 
 9-7 [猛犸工作室｜月薪三万的陆家嘴打工人，抠抠搜搜](/articles/cdt/337324.md)
-
-9-7 [剑客写字的地方｜底层互害，越来越魔幻了](/articles/cdt/337330.md)
-
-9-7 [忘川边的但丁｜国足这0比7，让我想起李鸿章的“看足球之问”](/articles/cdt/337337.md)
 
