--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-14 [乌克兰敦促西方对「胜利计划」做出承诺](/articles/dw/1024009.md)
+
 10-14 [分析：中國「聯合利劍2024B」與過往有何差異？](/articles/dw/1024010.md)
 
 10-14 [加沙人在战争忍受逃亡和绝望](/articles/dw/1024011.md)
@@ -598,6 +600,4 @@
 9-13 [客座评论：蒙古助普京打破国际通缉“魔咒”？](/articles/dw/1024307.md)
 
 9-13 [各方交锋在香山  习近平泽连斯基下月会晤？](/articles/dw/1024308.md)
-
-9-13 [63+55/58：中国延迟退休政策落地](/articles/dw/1024309.md)
 
