--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-14 [以色列继续空袭加沙之际 真主党无人机袭击导致以军4死7重伤](/articles/voa/1011823.md)
+
 10-14 [菲律宾防长质疑中国在《南中国海行为准则》上谈判的意图](/articles/voa/1011824.md)
 
 10-14 [韩国军方：朝鲜正准备炸毁与韩国相连的道路](/articles/voa/1011825.md)
@@ -598,6 +600,4 @@
 10-2 [中共建政75周年 示威者抗议中共在伦敦兴建新大使馆的计划](/articles/voa/1012121.md)
 
 10-2 [十一流亡港人示威 促美国公众施压参议员通过港经贸办认证法](/articles/voa/1012122.md)
-
-10-2 [以色列：伊朗统治者发动导弹攻击是犯下“大错”；美国：初步评估显示袭击被挫败](/articles/voa/1012123.md)
 
