--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-14 [解放军围台演习之际，捷克总统帕维尔在布拉格欢迎台湾前总统蔡英文](/articles/voa/1011821.md)
+
 10-14 [聿文视界：中国经济还有救吗？](/articles/voa/1011822.md)
 
 10-14 [以色列继续空袭加沙之际 真主党无人机袭击导致以军4死7重伤](/articles/voa/1011823.md)
@@ -598,6 +600,4 @@
 10-2 [拜登星期三视察遭受飓风袭击最严重的北卡罗来纳州](/articles/voa/1012119.md)
 
 10-2 [台风“山陀儿”逼近，台湾停工停课并休市](/articles/voa/1012120.md)
-
-10-2 [中共建政75周年 示威者抗议中共在伦敦兴建新大使馆的计划](/articles/voa/1012121.md)
 
