--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-14 [中国第四度实施“围台军演”吓住了谁？](/articles/voa/1011816.md)
+
+10-14 [中国工人在巴基斯坦多次遇袭后，李强抵巴参加上合组织会议讨论安全及经济](/articles/voa/1011817.md)
+
+10-14 [声称“惩戒”台独顽固分子，北京宣布制裁台商曹兴诚、立委沈伯洋和“黑熊学院”](/articles/voa/1011818.md)
+
 10-14 [中国看守所再传人满为患 分析:中共维稳优先，开启“泛罪化”时代](/articles/voa/1011819.md)
 
 10-14 [中国报复欧盟再加码，乳制品反补贴调查特别针对荷法意三国公司](/articles/voa/1011820.md)
@@ -594,10 +600,4 @@
 10-2 [中共庆建政75周年 万国来朝了吗?](/articles/voa/1012114.md)
 
 10-2 [石破茂与拜登通电话，强调加强区域合作](/articles/voa/1012115.md)
-
-10-2 [中国向WTO起诉加拿大加征电动汽车和金属产品关税](/articles/voa/1012116.md)
-
-10-2 [美国两位副总统候选人在辩论会上如何谈及中国？](/articles/voa/1012117.md)
-
-10-2 [伊朗：对以色列的导弹袭击已结束 奥斯汀: 美准备好对抗伊朗](/articles/voa/1012118.md)
 
