--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-15 [熊猫归来！“宝力”和“青宝”即将抵达华盛顿国家动物园](/articles/voa/1011802.md)
+
+10-15 [美国航天局宇宙飞船飞向木星卫星木卫二，寻找生命的关键](/articles/voa/1011803.md)
+
 10-15 [两名几内亚人在抗议中国矿业公司的示威中死亡。](/articles/voa/1011804.md)
 
 10-15 [以色列空袭黎巴嫩北部公寓楼造成18人死亡](/articles/voa/1011805.md)
@@ -596,8 +600,4 @@
 10-3 [在苏黎世被一名中国男子持刀袭击而受伤的三名男孩已脱离生命危险](/articles/voa/1012100.md)
 
 10-3 [VOA专访美军非洲司令谈非洲反恐行动与障碍以及中国在非洲再建军事基地的可能性](/articles/voa/1012101.md)
-
-10-3 [美中计划安排拜登和习近平未来几天通话](/articles/voa/1012102.md)
-
-10-3 [伊朗袭击以色列后，中国官媒借撤侨宣传中国强大 网民反以言论占上风](/articles/voa/1012103.md)
 
