--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-15 [中國9月出口遠低預期 貿易壁壘恐有長期影響](/articles/dw/1024002.md)
+
 10-15 [蔡英文访欧：台湾站在威权国家威胁最前线](/articles/dw/1024003.md)
 
 10-14 [中国称军演圆满落幕 欧美谴责吁克制](/articles/dw/1024004.md)
@@ -598,6 +600,4 @@
 9-15 [安全疑虑加剧 德国收紧边境管制](/articles/dw/1024300.md)
 
 9-14 [去美元化：人民币能走多远？](/articles/dw/1024301.md)
-
-9-14 [8月中国经济持续低迷，北京将出台更多刺激措施？](/articles/dw/1024302.md)
 
