--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-15 [特朗普再次当选只会“让中国再次伟大”](/articles/nyt/1042311.md)
+
 10-14 [日本人学校男童被杀案：如何抵抗中国的仇恨教育](/articles/nyt/1042312.md)
 
 10-14 [中国边境“新长城”蚕食尼泊尔领土？](/articles/nyt/1042313.md)
@@ -598,6 +600,4 @@
 7-5 [工党时隔14年赢得大选，英国“转向”前途仍不乐观](/articles/nyt/1042609.md)
 
 7-5 [拜登为什么一定要“死撑”](/articles/nyt/1042610.md)
-
-7-5 [欧盟要求中国电动车企确保有能力支付税款](/articles/nyt/1042611.md)
 
