--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-15 [中国在国际宇航大会展示月球土壤样本 并计划展开地外生命之探寻](/articles/voa/1011794.md)
+
+10-15 [中共军委副主席张又侠会见俄防长 承诺共同努力深化两军关系](/articles/voa/1011795.md)
+
 10-15 [哈里斯和特朗普星期一皆亲赴战场州宾夕法尼亚竞选造势](/articles/voa/1011796.md)
 
 10-15 [韩朝紧张局势升级之际，金正恩召开高层安全会议](/articles/voa/1011797.md)
@@ -596,8 +600,4 @@
 10-3 [50年来最高层级 新加坡前交通部长涉贪被判刑12个月](/articles/voa/1012092.md)
 
 10-3 [利用对习近平统治的不满，美国中情局加大招募中国人才力度](/articles/voa/1012093.md)
-
-10-3 [俄罗斯外长称 在台湾与其他亚洲问题上与中国站在一起](/articles/voa/1012094.md)
-
-10-3 [美国务卿就中华人民共和国国庆日发表祝贺声明](/articles/voa/1012095.md)
 
