--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-15 [韩军：朝鲜炸毁了连接韩朝边界公路的北侧路段](/articles/voa/1011792.md)
+
 10-15 [日本关注中国“围台军演” 向中国传达“关切”](/articles/voa/1011793.md)
 
 10-15 [中国在国际宇航大会展示月球土壤样本 并计划展开地外生命之探寻](/articles/voa/1011794.md)
@@ -598,6 +600,4 @@
 10-3 [两名中国旅客闹场港人活动 遭台湾政府驱逐出境](/articles/voa/1012090.md)
 
 10-3 [美国国土安全部示警 10月7日和11月选举存在安全风险](/articles/voa/1012091.md)
-
-10-3 [50年来最高层级 新加坡前交通部长涉贪被判刑12个月](/articles/voa/1012092.md)
 
