--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-15 [在中国围台军演隔天 美菲展开年度联合军演](/articles/voa/1011790.md)
+
+10-15 [美媒：以色列向白宫保证，不会攻击伊朗的核或石油设施](/articles/voa/1011791.md)
+
 10-15 [韩军：朝鲜炸毁了连接韩朝边界公路的北侧路段](/articles/voa/1011792.md)
 
 10-15 [日本关注中国“围台军演” 向中国传达“关切”](/articles/voa/1011793.md)
@@ -596,8 +600,4 @@
 10-3 [世界媒体看中国：股市猛涨与其他](/articles/voa/1012088.md)
 
 10-3 [智库报告：中国需要“雄心勃勃”的气候目标来兑现承诺](/articles/voa/1012089.md)
-
-10-3 [两名中国旅客闹场港人活动 遭台湾政府驱逐出境](/articles/voa/1012090.md)
-
-10-3 [美国国土安全部示警 10月7日和11月选举存在安全风险](/articles/voa/1012091.md)
 
