--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-15 [正面连接｜一个阿富汗女人的来信](/articles/cdt/336364.md)
+
 10-15 [每日一语 2024.10.14](/articles/cdt/336367.md)
 
 10-15 [非虚构故事｜一个贪官，轻易掏空一座城](/articles/cdt/336374.md)
@@ -598,6 +600,4 @@
 9-9 [【404文库】老干体v｜上半年财政缺口5.7万亿，8000万公职嗷嗷待哺，监委南下「远洋捕捞」](/articles/cdt/337303.md)
 
 9-9 [每日一语 2024.9.8](/articles/cdt/337305.md)
-
-9-9 [【404文库】“砸了今日锅，去还昨日债，谁为明日忧？”（外二篇）](/articles/cdt/337309.md)
 
