--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-15 [上合组织巴基斯坦峰会召开 安全阴云笼罩](/articles/dw/1023997.md)
+
+10-15 [完美！制作提拉米苏如何保证不翻车？](/articles/dw/1023998.md)
+
 10-15 [晚点救命：俄罗斯破坏活动险在德引发空难](/articles/dw/1023999.md)
 
 10-15 [菲律宾称中国民兵船“故意侧撞”菲方船只](/articles/dw/1024000.md)
@@ -596,8 +600,4 @@
 9-15 [与中方对峙数月后 菲巡逻舰撤离争议岛礁](/articles/dw/1024295.md)
 
 9-15 [德企中国员工赴德签证要等3个月 商会联署要求提速](/articles/dw/1024296.md)
-
-9-15 [德国有约5000座桥梁急需修缮](/articles/dw/1024297.md)
-
-9-15 [荣誉市民希特勒？ 小城师生呼吁厘清历史](/articles/dw/1024298.md)
 
