--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-15 [财新称北京考虑发行六万亿元人民币特别国债刺激经济](/articles/voa/1011788.md)
+
 10-15 [中国军方周一围台军演动用战机创下153架次单日最高纪录](/articles/voa/1011789.md)
 
 10-15 [在中国围台军演隔天 美菲展开年度联合军演](/articles/voa/1011790.md)
@@ -598,6 +600,4 @@
 10-3 [中国股市暴涨 正吸引热钱从亚洲其它市场回流中国](/articles/voa/1012086.md)
 
 10-3 [香港8月份零售总额及销量连续双跌，短期内改善不乐观](/articles/voa/1012087.md)
-
-10-3 [世界媒体看中国：股市猛涨与其他](/articles/voa/1012088.md)
 
