--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-16 [中共严管护照 走回毛时代闭关锁国的内控外防老路？](/articles/voa/1011784.md)
+
+10-16 [蒲黄榆说：从韩江获诺贝尔文学奖看东亚的软实力竞争](/articles/voa/1011785.md)
+
 10-15 [数字揭开中立面纱：中国九月份对俄出口创九个月以来最大增幅](/articles/voa/1011786.md)
 
 10-15 [马尼拉指责中国民兵船“故意撞击”菲律宾民用船只](/articles/voa/1011787.md)
@@ -596,8 +600,4 @@
 10-4 [菲律宾：密切关注并严肃对待媒体有关中国间谍渗透的报道](/articles/voa/1012082.md)
 
 10-4 [香港民研调查指 市民质疑盛事经济浪费及劳民伤财](/articles/voa/1012083.md)
-
-10-4 [以军袭击贝鲁特市中心，伊朗总统警告:如遭以色列报复就发起反击](/articles/voa/1012084.md)
-
-10-3 [“奇怪的”强台风在台湾西南部登陆，猛袭重镇高雄 至少两人死亡](/articles/voa/1012085.md)
 
