--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-16 [专家调查：2024年中国经济增速只有4.8%，房地产衰退还将持续数年](/articles/voa/1011782.md)
+
+10-16 [巴基斯坦在严密的安保措施下举办上海合作组织峰会](/articles/voa/1011783.md)
+
 10-16 [中共严管护照 走回毛时代闭关锁国的内控外防老路？](/articles/voa/1011784.md)
 
 10-16 [蒲黄榆说：从韩江获诺贝尔文学奖看东亚的软实力竞争](/articles/voa/1011785.md)
@@ -596,8 +600,4 @@
 10-4 [习近平崇尚祭祀英烈 分析：把中国引入到“准战”状态](/articles/voa/1012080.md)
 
 10-4 [中东区域战争已经到来？是否继续升级，以色列将如何回击伊朗成为关键](/articles/voa/1012081.md)
-
-10-4 [菲律宾：密切关注并严肃对待媒体有关中国间谍渗透的报道](/articles/voa/1012082.md)
-
-10-4 [香港民研调查指 市民质疑盛事经济浪费及劳民伤财](/articles/voa/1012083.md)
 
