--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-16 [开中文课、赴新疆游：中国文化外交攻势瞄向印尼穆斯林](/articles/voa/1011781.md)
+
 10-16 [专家调查：2024年中国经济增速只有4.8%，房地产衰退还将持续数年](/articles/voa/1011782.md)
 
 10-16 [巴基斯坦在严密的安保措施下举办上海合作组织峰会](/articles/voa/1011783.md)
@@ -598,6 +600,4 @@
 10-4 [乌军使用美制导弹摧毁俄军一重要雷达站，让俄军防空系统瞬间变失明](/articles/voa/1012079.md)
 
 10-4 [习近平崇尚祭祀英烈 分析：把中国引入到“准战”状态](/articles/voa/1012080.md)
-
-10-4 [中东区域战争已经到来？是否继续升级，以色列将如何回击伊朗成为关键](/articles/voa/1012081.md)
 
