--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-16 [德桑蒂斯州长称赞米尔顿飓风后的复原努力，佛罗里达州洪水同时持续上涨](/articles/voa/1011778.md)
+
+10-16 [美伊对峙升级，美国安专家呼吁制定新伊朗战略时必须考虑制裁中国](/articles/voa/1011779.md)
+
+10-16 [熊猫抵达美国 即将前往华盛顿国家动物园](/articles/voa/1011780.md)
+
 10-16 [开中文课、赴新疆游：中国文化外交攻势瞄向印尼穆斯林](/articles/voa/1011781.md)
 
 10-16 [专家调查：2024年中国经济增速只有4.8%，房地产衰退还将持续数年](/articles/voa/1011782.md)
@@ -594,10 +600,4 @@
 10-4 [以色列敦促更多的黎巴嫩南部城镇居民撤离](/articles/voa/1012076.md)
 
 10-4 [在美国用六千部冒牌手机欺诈苹果公司的两名中国公民被判处监禁](/articles/voa/1012077.md)
-
-10-4 [中共加强对知识分子的打压力度：多位学者因批评言论遭整肃](/articles/voa/1012078.md)
-
-10-4 [乌军使用美制导弹摧毁俄军一重要雷达站，让俄军防空系统瞬间变失明](/articles/voa/1012079.md)
-
-10-4 [习近平崇尚祭祀英烈 分析：把中国引入到“准战”状态](/articles/voa/1012080.md)
 
