--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-16 [美国：以色列必须增加对加沙的人道援助，否则将面临削减军事支持的风险](/articles/voa/1011776.md)
+
+10-16 [冲突与气候变迁加剧非洲饥荒](/articles/voa/1011777.md)
+
 10-16 [德桑蒂斯州长称赞米尔顿飓风后的复原努力，佛罗里达州洪水同时持续上涨](/articles/voa/1011778.md)
 
 10-16 [美伊对峙升级，美国安专家呼吁制定新伊朗战略时必须考虑制裁中国](/articles/voa/1011779.md)
@@ -596,8 +600,4 @@
 10-4 [台湾代表处举办双十酒会，俞大㵢感谢美国支持：“让挑衅者知道我们并不孤单”](/articles/voa/1012074.md)
 
 10-4 [中国车涌进南非，其低廉的价格吸引当地买家](/articles/voa/1012075.md)
-
-10-4 [以色列敦促更多的黎巴嫩南部城镇居民撤离](/articles/voa/1012076.md)
-
-10-4 [在美国用六千部冒牌手机欺诈苹果公司的两名中国公民被判处监禁](/articles/voa/1012077.md)
 
