--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,8 @@
 
 10-16 [刘玄鸡｜孙悟空的销账和跑路](/articles/cdt/336354.md)
 
+10-16 [大佳说｜有些市场可以假装努力，但外汇不会陪你演戏。](/articles/cdt/336358.md)
+
 10-16 [每日一语 2024.10.15](/articles/cdt/336359.md)
 
 10-15 [【CDT关注】莽莽｜中国Z世代审核员：生存吃饭最重要](/articles/cdt/336360.md)
@@ -598,6 +600,4 @@
 9-9 [古老板的老巢｜开放外资医院，十年前的文件重发一次，这是为什么？](/articles/cdt/337273.md)
 
 9-9 [【404文库】澎湃新闻｜“失控”的定制校车](/articles/cdt/337275.md)
-
-9-11 [【敏感词库】中非论坛“大撒币”、中共海外代理人被捕、地方政府“砸锅卖铁”](/articles/cdt/337285.md)
 
