--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-16 [美国会要求总统促使中国释放错误拘留的美国人](/articles/voa/1011775.md)
+
 10-16 [美国：以色列必须增加对加沙的人道援助，否则将面临削减军事支持的风险](/articles/voa/1011776.md)
 
 10-16 [冲突与气候变迁加剧非洲饥荒](/articles/voa/1011777.md)
@@ -598,6 +600,4 @@
 10-4 [美国聚焦中东战争之际 中国试探南中国海周边国家捍卫领土主权的决心](/articles/voa/1012073.md)
 
 10-4 [台湾代表处举办双十酒会，俞大㵢感谢美国支持：“让挑衅者知道我们并不孤单”](/articles/voa/1012074.md)
-
-10-4 [中国车涌进南非，其低廉的价格吸引当地买家](/articles/voa/1012075.md)
 
