--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-16 [微软报告：加沙战争后伊朗对以色列的网络攻击激增](/articles/voa/1011766.md)
+
+10-16 [中国股市虽诱人，但投资经理选择在美国大选前保持谨慎](/articles/voa/1011767.md)
+
 10-16 [北京呼吁采取紧急措施 巴基斯坦将加强对中国项目的安全保障](/articles/voa/1011768.md)
 
 10-16 [韩国加强对南中国海有限度的承诺](/articles/voa/1011769.md)
@@ -596,8 +600,4 @@
 10-4 [刚果东部一艘有278名乘客的超载船只倾覆，至少78人丧生](/articles/voa/1012064.md)
 
 10-4 [台风“山陀儿”来袭后，台湾开始清理工作并逐步重新开放](/articles/voa/1012065.md)
-
-10-4 [拜登在佐治亚和佛罗里达州视察了飓风“海伦”带来的严重灾情](/articles/voa/1012066.md)
-
-10-4 [中国力推与东盟自贸区升级 但对东盟国家来说或许是弊大于利](/articles/voa/1012067.md)
 
