--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-16 [“宝力”“青宝”高调抵达华盛顿，熊猫外交“重生”](/articles/nyt/1042308.md)
+
 10-15 [熊猫工厂：揭秘中国大熊猫保护计划](/articles/nyt/1042309.md)
 
 10-15 [野生大熊猫到底有多少？](/articles/nyt/1042310.md)
@@ -598,6 +600,4 @@
 7-8 [法国大选：左翼联盟崛起，联合阻击极右翼](/articles/nyt/1042606.md)
 
 7-8 [物价高企、债务失控：经济焦虑加剧全球政治动荡](/articles/nyt/1042607.md)
-
-7-5 [为什么越来越多法国年轻人投票支持极右翼](/articles/nyt/1042608.md)
 
