--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-16 [起底前纽约市长高级顾问郑祺蓉：与中国关系密切](/articles/nyt/1042307.md)
+
 10-16 [“宝力”“青宝”高调抵达华盛顿，熊猫外交“重生”](/articles/nyt/1042308.md)
 
 10-15 [熊猫工厂：揭秘中国大熊猫保护计划](/articles/nyt/1042309.md)
@@ -598,6 +600,4 @@
 7-8 [日本东京都知事选举，一场民主“闹剧”？](/articles/nyt/1042605.md)
 
 7-8 [法国大选：左翼联盟崛起，联合阻击极右翼](/articles/nyt/1042606.md)
-
-7-8 [物价高企、债务失控：经济焦虑加剧全球政治动荡](/articles/nyt/1042607.md)
 
