--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-16 [习近平：中国愿意与美国做伙伴、做朋友](/articles/voa/1011764.md)
+
 10-16 [自由之家新报告：中国互联网自由度持续全球垫底，台湾打击虚假信息受赞](/articles/voa/1011765.md)
 
 10-16 [微软报告：加沙战争后伊朗对以色列的网络攻击激增](/articles/voa/1011766.md)
@@ -598,6 +600,4 @@
 10-4 [任志强女儿致信习近平，恳求让病重的父亲出国治疗](/articles/voa/1012062.md)
 
 10-4 [哈里斯与丽兹·切尼在共和党诞生地同台造势 特朗普则在密歇根州举行集会](/articles/voa/1012063.md)
-
-10-4 [刚果东部一艘有278名乘客的超载船只倾覆，至少78人丧生](/articles/voa/1012064.md)
 
