--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-16 [他让陌生人强奸妻子，他们为什么不认为自己是强奸犯](/articles/nyt/1042306.md)
+
 10-16 [起底前纽约市长高级顾问郑祺蓉：与中国关系密切](/articles/nyt/1042307.md)
 
 10-16 [“宝力”“青宝”高调抵达华盛顿，熊猫外交“重生”](/articles/nyt/1042308.md)
@@ -598,6 +600,4 @@
 7-8 [诺奖得主门罗之女称曾遭继父性侵，指母亲置之不理](/articles/nyt/1042604.md)
 
 7-8 [日本东京都知事选举，一场民主“闹剧”？](/articles/nyt/1042605.md)
-
-7-8 [法国大选：左翼联盟崛起，联合阻击极右翼](/articles/nyt/1042606.md)
 
