--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-16 [乌克兰希望在拜登离任前可以收到加入北约的邀请](/articles/voa/1011761.md)
+
+10-16 [中、俄、蒙深化合作 首次召开三方总理级会议](/articles/voa/1011762.md)
+
 10-16 [特朗普：将对进口商品征收“历史上最高的关税”](/articles/voa/1011763.md)
 
 10-16 [习近平：中国愿意与美国做伙伴、做朋友](/articles/voa/1011764.md)
@@ -596,8 +600,4 @@
 10-4 [中国出台24条促进就业文件 重点群体感悲观](/articles/voa/1012059.md)
 
 10-4 [美国纽约州政要出席台湾双十酒会](/articles/voa/1012060.md)
-
-10-4 [俄乌双方利用无人机互攻 俄罗斯核电站发生汽车炸弹袭击1人丧生](/articles/voa/1012061.md)
-
-10-4 [任志强女儿致信习近平，恳求让病重的父亲出国治疗](/articles/voa/1012062.md)
 
