--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-16 [习近平视察福建 台官员称军演让国际更挺台](/articles/dw/1023993.md)
+
 10-16 [川普稱與習近平交情好 避談會否出兵援台](/articles/dw/1023994.md)
 
 10-15 [斯里兰卡打击网络诈骗，逮捕230多名中国嫌犯](/articles/dw/1023995.md)
@@ -598,6 +600,4 @@
 9-15 [美国电视辩论 谁赢得选民的心?](/articles/dw/1024291.md)
 
 9-15 [中秋未到 “贝碧嘉”先行 上海取消航班](/articles/dw/1024292.md)
-
-9-15 [长平观察：中国脱口秀演员讲特朗普段子](/articles/dw/1024293.md)
 
