--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-16 [中国称决不承诺放弃对台使用武力，习近平赴福建东山岛调研](/articles/voa/1011759.md)
+
+10-16 [朝鲜称140万人申请参军 多国成立监督对朝制裁的机构](/articles/voa/1011760.md)
+
 10-16 [乌克兰希望在拜登离任前可以收到加入北约的邀请](/articles/voa/1011761.md)
 
 10-16 [中、俄、蒙深化合作 首次召开三方总理级会议](/articles/voa/1011762.md)
@@ -596,8 +600,4 @@
 10-4 [中国游说失败，欧盟对中国电动车加征高额关税终成定局](/articles/voa/1012057.md)
 
 10-4 [经过近半年多轮谈判，美韩达成驻韩美军新五年期防卫费分担协议](/articles/voa/1012058.md)
-
-10-4 [中国出台24条促进就业文件 重点群体感悲观](/articles/voa/1012059.md)
-
-10-4 [美国纽约州政要出席台湾双十酒会](/articles/voa/1012060.md)
 
