--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-16 [增长6.1%  越南经济成功的原因是什么？](/articles/dw/1023992.md)
+
 10-16 [习近平视察福建 台官员称军演让国际更挺台](/articles/dw/1023993.md)
 
 10-16 [川普稱與習近平交情好 避談會否出兵援台](/articles/dw/1023994.md)
@@ -598,6 +600,4 @@
 9-16 [川普再傳遭暗殺未遂 槍手動機尚待釐清](/articles/dw/1024290.md)
 
 9-15 [美国电视辩论 谁赢得选民的心?](/articles/dw/1024291.md)
-
-9-15 [中秋未到 “贝碧嘉”先行 上海取消航班](/articles/dw/1024292.md)
 
