--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-16 [解决住房问题 香港将要求「劏房」改建升级](/articles/dw/1023987.md)
+
+10-16 [泽连斯基公布“胜利计划” 强调不会割让领土换和平](/articles/dw/1023988.md)
+
 10-16 [德国总理：必须打造新政策拯救德国工业](/articles/dw/1023989.md)
 
 10-16 [分析师：中国第三季度经济增幅将创今年新低](/articles/dw/1023990.md)
@@ -596,8 +600,4 @@
 9-16 [大众在中国电动车市场艰难求生](/articles/dw/1024285.md)
 
 9-16 [申请专利：中国7纳米芯片光刻技术取得突破](/articles/dw/1024286.md)
-
-9-16 [教皇方济各对梵中关系表示满意](/articles/dw/1024287.md)
-
-9-16 [客座评论：菲律宾海警船撤离仙宾礁背后的原因](/articles/dw/1024288.md)
 
