--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-16 [泽连斯基的“胜利计划”有哪些要点？](/articles/voa/1011755.md)
+
 10-16 [巴基斯坦总理在上合组织呼吁扩大“一带一路”倡议，提升区域合作](/articles/voa/1011756.md)
 
 10-16 [美日韩宣布启动11国监督机制，替代联合国专家小组监督制裁朝鲜措施的实施](/articles/voa/1011757.md)
@@ -598,6 +600,4 @@
 10-5 [菲律宾发声谴责中国海警人员殴打越南渔民](/articles/voa/1012053.md)
 
 10-5 [分析：日本可能寻求和美国建立核磋商机制，应对核战紧急状态](/articles/voa/1012054.md)
-
-10-4 [中国股市疯涨给对冲基金带来短期暴利 但专家提醒为涨势消退做好准备](/articles/voa/1012055.md)
 
