--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-17 [台湾亲中艺人挺中共军演引众怒 民间吁修法处以“教唆”罪](/articles/voa/1011750.md)
+
+10-17 [为孤立俄罗斯再做努力，欧盟与海湾国家举行首次峰会](/articles/voa/1011751.md)
+
 10-17 [香港特首施政报告漠视民意 港人失望 评价甚低](/articles/voa/1011752.md)
 
 10-17 [泽连斯基：情报证实朝鲜既向俄提供武器又派兵助战，是战争的实际参与者](/articles/voa/1011753.md)
@@ -596,8 +600,4 @@
 10-5 [哈马斯袭击以色列一周年 恐袭创伤仍挥之不去](/articles/voa/1012048.md)
 
 10-5 [美国劳动力市场仍强劲，新增25.4万份工作， 失业率降至4.1%](/articles/voa/1012049.md)
-
-10-5 [哈梅内伊为伊朗向以色列发动导弹袭击辩护](/articles/voa/1012050.md)
-
-10-5 [两名英国男子在伦敦法庭否认充当中国间谍](/articles/voa/1012051.md)
 
