--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-17 [行业整顿令前景黯淡 中国金融专业人士纷纷转行](/articles/voa/1011744.md)
+
 10-17 [习近平称愿和美国做伙伴和朋友 观察人士：听其言，观其行](/articles/voa/1011745.md)
 
 10-17 [泽连斯基呼吁让乌克兰加入北约和更多重建援助](/articles/voa/1011746.md)
@@ -598,6 +600,4 @@
 10-5 [拜登：以色列尚未决定如何回应伊朗导弹袭击](/articles/voa/1012042.md)
 
 10-5 [北约新领袖承诺继续支持乌克兰，但前方挑战重重](/articles/voa/1012043.md)
-
-10-5 [泽连斯基访问与俄罗斯库尔斯州接壤的乌克兰苏梅州](/articles/voa/1012044.md)
 
