--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-17 [第一發催淚彈之後：三個香港人的「後傘運人生」](/articles/dw/1023986.md)
+
 10-16 [解决住房问题 香港将要求「劏房」改建升级](/articles/dw/1023987.md)
 
 10-16 [泽连斯基公布“胜利计划” 强调不会割让领土换和平](/articles/dw/1023988.md)
@@ -598,6 +600,4 @@
 9-16 [与冯德莱恩关系紧张 法国欧盟专员辞职](/articles/dw/1024284.md)
 
 9-16 [大众在中国电动车市场艰难求生](/articles/dw/1024285.md)
-
-9-16 [申请专利：中国7纳米芯片光刻技术取得突破](/articles/dw/1024286.md)
 
