--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-17 [批英特爾在中國「吃飯砸鍋」 網安協會籲審查](/articles/dw/1023985.md)
+
 10-17 [第一發催淚彈之後：三個香港人的「後傘運人生」](/articles/dw/1023986.md)
 
 10-16 [解决住房问题 香港将要求「劏房」改建升级](/articles/dw/1023987.md)
@@ -598,6 +600,4 @@
 9-16 [七个问题了解德国扩大边境检查](/articles/dw/1024283.md)
 
 9-16 [与冯德莱恩关系紧张 法国欧盟专员辞职](/articles/dw/1024284.md)
-
-9-16 [大众在中国电动车市场艰难求生](/articles/dw/1024285.md)
 
