--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-17 [基本常识｜四川朋友别做梦啦，拆迁暴富的时代一去不复返了](/articles/cdt/336325.md)
+
+10-17 [木蹊说｜“川爷”千万拆迁款？一个专为韭菜定制的谣言](/articles/cdt/336327.md)
+
 10-17 [【重温】暖壶人｜民族政策历史文件](/articles/cdt/336328.md)
 
 10-16 [财主的阵地｜依赖于政府的创新，为什么不靠谱？](/articles/cdt/336339.md)
@@ -596,8 +600,4 @@
 9-9 [每日一语 2024.9.9](/articles/cdt/337249.md)
 
 9-11 [【翻车现场】“连这新闻都得精选评论，当那些外资是傻的啊？”](/articles/cdt/337250.md)
-
-9-9 [观人随笔｜他死了，没有然后](/articles/cdt/337254.md)
-
-9-9 [特正经的张某某｜“一个中国班级，放弃班委是否可能”及其深层逻辑](/articles/cdt/337257.md)
 
