--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-17 [中国救房市 “白名单”项目的信贷加倍至4万亿人民币](/articles/voa/1011736.md)
+
 10-17 [美国海关暂停部分中国大疆无人机进口 指控涉及强迫劳动](/articles/voa/1011737.md)
 
 10-17 [朝鲜修宪：现在将韩国定义为“敌对”国家](/articles/voa/1011738.md)
@@ -598,6 +600,4 @@
 10-5 [海地发生黑帮屠杀平民 至少70死 数千人逃离家园](/articles/voa/1012034.md)
 
 10-5 [担忧特朗普煽动言论 拜登表对美国大选能否和平进行失去信心](/articles/voa/1012035.md)
-
-10-5 [拜登:不知道以色列是否为了影响美国大选 推迟和平协议](/articles/voa/1012036.md)
 
