--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-17 [国家有办法让人们多生孩子吗](/articles/nyt/1042302.md)
+
 10-17 [朝鲜从乌克兰战争中得到了什么](/articles/nyt/1042303.md)
 
 10-17 [中国对台军事施压成台海新常态](/articles/nyt/1042304.md)
@@ -598,6 +600,4 @@
 7-9 [日元“难以承受之低”：日本军费怎么办？](/articles/nyt/1042600.md)
 
 7-9 [美国推进“芯片外交”：重塑全球供应链，减少对华依赖](/articles/nyt/1042601.md)
-
-7-9 [《私人革命》：“社会新秩序”下四位中国女性的命运](/articles/nyt/1042602.md)
 
