--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-17 [真实故事计划｜替父母还债的年轻人](/articles/cdt/336318.md)
+
 10-17 [【网络民议】员工擅自离岗16年，国企急催](/articles/cdt/336320.md)
 
 10-17 [三辉图书｜帝国没有闲散人员的容身之处](/articles/cdt/336322.md)
@@ -598,6 +600,4 @@
 9-10 [冰川思享号｜全国最知名烂尾楼，正在“浴火重生”](/articles/cdt/337228.md)
 
 9-10 [澎湃新闻｜“央视今晚还是不转播国足比赛”](/articles/cdt/337231.md)
-
-9-10 [【404帖子】穗城流年｜一位身着美团服装的外卖骑手举牌呼吁](/articles/cdt/337237.md)
 
