--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-17 [台湾官员：此次中国军演构成了前所未有的威胁](/articles/dw/1023982.md)
+
 10-17 [中國再度發動環台軍演 台灣人怎麼看？](/articles/dw/1023983.md)
 
 10-17 [中国房地产急需强心针 住建部宣布扩大“白名单”](/articles/dw/1023984.md)
@@ -598,6 +600,4 @@
 9-17 [在華遭囚18年 美國牧師林大衛獲釋返家](/articles/dw/1024280.md)
 
 9-16 [哈萨克斯坦总统告诉肖尔茨：军事上不可能战胜俄罗斯](/articles/dw/1024281.md)
-
-9-16 [“雪饼案”二审秘密宣判，辩护律师发布紧急呼吁](/articles/dw/1024282.md)
 
