--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-17 [中国五部门推稳楼市“组合拳” 分析:新瓶装旧酒难收实效](/articles/voa/1011731.md)
+
+10-17 [孙韵：金砖组织挑战重重](/articles/voa/1011732.md)
+
 10-17 [台湾称中国在军事演习期间试射了两枚导弹](/articles/voa/1011733.md)
 
 10-17 [台湾驻南非代表被要求限期处迁出首都 台官员批中国打压、研拟反制措施](/articles/voa/1011734.md)
@@ -596,8 +600,4 @@
 10-5 [以哈战争周年临近，中东战事结束无期，冲突继续扩大令人不安](/articles/voa/1012029.md)
 
 10-5 [专访经济学家罗奇：中共建政75年，如何走出当下经济困境和美中关系低谷？](/articles/voa/1012030.md)
-
-10-5 [英大律师公会主席当面批评香港同行 指香港法治被行政专权取代](/articles/voa/1012031.md)
-
-10-5 [中国十一长假再现“排队看房”潮 分析:短期刺激未解决楼市结构性难题](/articles/voa/1012032.md)
 
