--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-17 [张3丰的世界｜一封给走失朋友的信](/articles/cdt/336316.md)
+
 10-17 [真实故事计划｜替父母还债的年轻人](/articles/cdt/336318.md)
 
 10-17 [【网络民议】员工擅自离岗16年，国企急催](/articles/cdt/336320.md)
@@ -598,6 +600,4 @@
 9-11 [柳飘飘了吗｜全女综艺，新的爹味重灾区](/articles/cdt/337225.md)
 
 9-10 [冰川思享号｜全国最知名烂尾楼，正在“浴火重生”](/articles/cdt/337228.md)
-
-9-10 [澎湃新闻｜“央视今晚还是不转播国足比赛”](/articles/cdt/337231.md)
 
