--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-18 [哈马斯领导人叶海亚·辛瓦尔其人](/articles/voa/1011719.md)
+
 10-18 [以色列杀死去年10月7日恐怖攻击的策划者](/articles/voa/1011720.md)
 
 10-18 [美国制裁两家中国实体 称它们制造和运输俄罗斯用于俄乌战争的无人机](/articles/voa/1011721.md)
@@ -598,6 +600,4 @@
 10-6 [美国国会及行政当局中国委员会主席敦促拜登寻求释放在中国被不当拘留的美国人](/articles/voa/1012017.md)
 
 10-6 [特朗普重返险遭暗杀之地宾州巴特勒造势 哈里斯会晤阿拉伯裔领袖](/articles/voa/1012018.md)
-
-10-6 [赖清德“祖国说”引热议 微博疑封杀相关视频](/articles/voa/1012019.md)
 
