--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-18 [每日一语 2024.10.17](/articles/cdt/336307.md)
+
+10-18 [冰点周刊｜藏在酒店民宿里的摄像头](/articles/cdt/336311.md)
+
 10-17 [每日一语 2024.10.16](/articles/cdt/336313.md)
 
 10-17 [张3丰的世界｜一封给走失朋友的信](/articles/cdt/336316.md)
@@ -596,8 +600,4 @@
 9-11 [地球人口口｜“这个夏天再也捂不热他的尸体。”](/articles/cdt/337219.md)
 
 9-11 [四环青年｜55岁外卖“单王”猝死，每天接单20小时不是他的错](/articles/cdt/337221.md)
-
-9-11 [辩护人Defenders｜我们为什么选择沉默式辩护](/articles/cdt/337223.md)
-
-9-11 [柳飘飘了吗｜全女综艺，新的爹味重灾区](/articles/cdt/337225.md)
 
