--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-18 [中国在新疆举办世界媒体峰会被指是其宣传战略的一环](/articles/voa/1011712.md)
+
 10-18 [特朗普枪击事件调查小组呼吁特勤局进行全面改革](/articles/voa/1011713.md)
 
 10-18 [首尔是否有权重新处理核废料引发辩论](/articles/voa/1011714.md)
@@ -598,6 +600,4 @@
 10-7 [哈马斯袭击以色列一周年：以哈战争如何改变中东和全球权力格局](/articles/voa/1012010.md)
 
 10-7 [以哈战争周年前夕，以色列对贝鲁特发动迄今为止最猛烈空袭](/articles/voa/1012011.md)
-
-10-7 [直击大选假信息：犹太人控制美国政府?](/articles/voa/1012012.md)
 
