--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-18 [星球商业评论｜叮咚一下人就没了](/articles/cdt/336299.md)
+
+10-18 [读宋史的赵大胖｜让校领导带头吃学生食堂，真就那么难吗？](/articles/cdt/336301.md)
+
 10-18 [每日人物｜替父母还债的年轻人](/articles/cdt/336303.md)
 
 10-18 [冰川思享号｜备受内卷折磨的年轻人，正在群嘲这个北大女教授](/articles/cdt/336305.md)
@@ -596,8 +600,4 @@
 9-11 [极昼工作室｜货车司机死亡后，剩下的最后700公里](/articles/cdt/337207.md)
 
 9-11 [【麻辣总局】人民日报｜一将无能累死三军，该有人出来担责了](/articles/cdt/337208.md)
-
-9-11 [【404文库】亮见｜祥子累死在了车上](/articles/cdt/337210.md)
-
-9-11 [每日一语 2024.9.10](/articles/cdt/337213.md)
 
