--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-18 [中国三季度GDP增速放缓，凸显经济刺激措施紧迫性](/articles/nyt/1042300.md)
+
 10-18 [香港旅游业为何难以恢复活力](/articles/nyt/1042301.md)
 
 10-17 [国家有办法让人们多生孩子吗](/articles/nyt/1042302.md)
@@ -598,6 +600,4 @@
 7-10 [中国游泳队禁药丑闻：世界反兴奋剂机构称其自身无过错](/articles/nyt/1042598.md)
 
 7-10 [美国选情为北约峰会蒙上阴影，成员国如何克服信心危机？](/articles/nyt/1042599.md)
-
-7-9 [日元“难以承受之低”：日本军费怎么办？](/articles/nyt/1042600.md)
 
