--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+10-18 [以色列在意外遭遇战中击毙哈马斯领导人辛瓦尔](/articles/nyt/1042298.md)
+
+10-18 [英国外交大臣访华，恢复缓和中英关系](/articles/nyt/1042299.md)
+
 10-18 [中国三季度GDP增速放缓，凸显经济刺激措施紧迫性](/articles/nyt/1042300.md)
 
 10-18 [香港旅游业为何难以恢复活力](/articles/nyt/1042301.md)
@@ -596,8 +600,4 @@
 7-10 [莫迪访问俄罗斯，彰显西方孤立普京策略失败](/articles/nyt/1042596.md)
 
 7-10 [如何挽回一场失败的辩论？拜登团队的疯狂48小时](/articles/nyt/1042597.md)
-
-7-10 [中国游泳队禁药丑闻：世界反兴奋剂机构称其自身无过错](/articles/nyt/1042598.md)
-
-7-10 [美国选情为北约峰会蒙上阴影，成员国如何克服信心危机？](/articles/nyt/1042599.md)
 
