--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-18 [辛瓦尔已死，加沙能实现停战吗？](/articles/nyt/1042297.md)
+
 10-18 [以色列在意外遭遇战中击毙哈马斯领导人辛瓦尔](/articles/nyt/1042298.md)
 
 10-18 [英国外交大臣访华，恢复缓和中英关系](/articles/nyt/1042299.md)
@@ -598,6 +600,4 @@
 7-11 [暴力事件激增，巴基斯坦中资项目面临安全挑战](/articles/nyt/1042595.md)
 
 7-10 [莫迪访问俄罗斯，彰显西方孤立普京策略失败](/articles/nyt/1042596.md)
-
-7-10 [如何挽回一场失败的辩论？拜登团队的疯狂48小时](/articles/nyt/1042597.md)
 
