--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-18 [年内第三次降息 欧洲央行将关键利率下调至3.25%](/articles/dw/1023974.md)
+
 10-18 [中國第三季GDP成長4.6％ 保五挑戰大](/articles/dw/1023975.md)
 
 10-18 [中國第三季經濟GDP成長4.6％ 保五挑戰大](/articles/dw/1023976.md)
@@ -598,6 +600,4 @@
 9-18 [欧中电动车关税谈不拢 王文涛称对欧盟失望](/articles/dw/1024272.md)
 
 9-17 [德外长承诺向乌克兰追加1亿欧元援助](/articles/dw/1024273.md)
-
-9-17 [哈贝克会晤王文涛：欧中应谈判解决电动汽车关税问题](/articles/dw/1024274.md)
 
