--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-18 [朝鲜半岛和台海 中共和美国谁能同时打赢“两场战争”？](/articles/voa/1011704.md)
+
+10-18 [以军打死辛瓦尔后，内塔尼亚胡称加沙和黎巴嫩战争仍将持续](/articles/voa/1011705.md)
+
 10-18 [韩国：朝鲜派兵援俄参战对国际安全构成严重威胁](/articles/voa/1011706.md)
 
 10-18 [真主党：辛瓦尔死后，与以色列的战争将进一步升级](/articles/voa/1011707.md)
@@ -596,8 +600,4 @@
 10-7 [美印半导体协议或开辟与中国“芯片战”新战场](/articles/voa/1012002.md)
 
 10-7 [巴基斯坦南部致命自杀式炸弹击中中国车队致2死10伤](/articles/voa/1012003.md)
-
-10-7 [教宗呼吁世人在10月7日当天禁食并为世界和平祈祷](/articles/voa/1012004.md)
-
-10-7 [美国联邦航空管理局批准SpaceX猎鹰9号星期一的发射](/articles/voa/1012005.md)
 
