--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-18 [拜登“闪电式”访德 专家称其“最后一位跨大西洋总统”](/articles/dw/1023968.md)
+
 10-18 [英国外交大臣寻求推动中英贸易](/articles/dw/1023969.md)
 
 10-18 [德國國土為何有一個「小美利堅」？](/articles/dw/1023970.md)
@@ -598,6 +600,4 @@
 9-18 [长平观察：“霉霉”不“好好唱歌”，中国粉丝怎么想？](/articles/dw/1024266.md)
 
 9-18 [太空行走的秘密](/articles/dw/1024267.md)
-
-9-18 [默尔茨的对华政策如何？曾呼吁总理访华会胡锦涛](/articles/dw/1024268.md)
 
