--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-18 [中国钢铁出口九月大涨，专家：过剩产能正在引起更多的贸易摩擦](/articles/voa/1011703.md)
+
 10-18 [朝鲜半岛和台海 中共和美国谁能同时打赢“两场战争”？](/articles/voa/1011704.md)
 
 10-18 [以军打死辛瓦尔后，内塔尼亚胡称加沙和黎巴嫩战争仍将持续](/articles/voa/1011705.md)
@@ -598,6 +600,4 @@
 10-7 [加沙战争一周年：看中国如何从中东的“对冲”玩家变成“楔入”者](/articles/voa/1012001.md)
 
 10-7 [美印半导体协议或开辟与中国“芯片战”新战场](/articles/voa/1012002.md)
-
-10-7 [巴基斯坦南部致命自杀式炸弹击中中国车队致2死10伤](/articles/voa/1012003.md)
 
