--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-18 [中国第三季GDP增速4.6% 分析：全年“保5”挑战大](/articles/voa/1011700.md)
+
+10-18 [拜登任内最后一次访欧，德国总统希望美国谨记盟友不可或缺](/articles/voa/1011701.md)
+
+10-18 [台积电股价周五再破纪录，带动台股一度暴涨650点](/articles/voa/1011702.md)
+
 10-18 [中国钢铁出口九月大涨，专家：过剩产能正在引起更多的贸易摩擦](/articles/voa/1011703.md)
 
 10-18 [朝鲜半岛和台海 中共和美国谁能同时打赢“两场战争”？](/articles/voa/1011704.md)
@@ -594,10 +600,4 @@
 10-7 [伤痕累累、多线作战的以色列人纪念哈马斯袭击一周年](/articles/voa/1011998.md)
 
 10-7 [知情人士：台湾前总统蔡英文即将出访欧洲三国](/articles/voa/1011999.md)
-
-10-7 [10月7日周年前夕 支持巴勒斯坦和以色列的人在世界各地举行集会](/articles/voa/1012000.md)
-
-10-7 [加沙战争一周年：看中国如何从中东的“对冲”玩家变成“楔入”者](/articles/voa/1012001.md)
-
-10-7 [美印半导体协议或开辟与中国“芯片战”新战场](/articles/voa/1012002.md)
 
