--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,6 +5,10 @@
 
 10-18 [每日一语 2024.10.18](/articles/cdt/336290.md)
 
+10-19 [衣者朝新｜最新证据证明，确有老干部“耍特权”](/articles/cdt/336295.md)
+
+10-19 [历史总在押韵｜司马南在开封府直播呼唤包公，说到天子犯法与庶民同罪时被封禁](/articles/cdt/336296.md)
+
 10-18 [星球商业评论｜叮咚一下人就没了](/articles/cdt/336299.md)
 
 10-18 [读宋史的赵大胖｜让校领导带头吃学生食堂，真就那么难吗？](/articles/cdt/336301.md)
@@ -596,8 +600,4 @@
 9-11 [新新默存｜温克坚：砸锅卖铁——地方债务的前世今生](/articles/cdt/337190.md)
 
 9-11 [【旧文重温】兽楼处｜送养公告收集者的二十年](/articles/cdt/337196.md)
-
-9-11 [老牌恶棍｜国足输了，中国却赢麻了](/articles/cdt/337204.md)
-
-9-11 [极昼工作室｜货车司机死亡后，剩下的最后700公里](/articles/cdt/337207.md)
 
