--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-19 [新西兰加大力度反中共干涉 不再允许五星红旗满天飞](/articles/voa/1011697.md)
+
 10-19 [金正恩视察前线部队，再称韩国是一个“敌对外国”并威胁“进攻性”打击](/articles/voa/1011698.md)
 
 10-19 [韩情报机构：朝鲜派兵加入俄军参加乌战，交战方从两国扩大至三国](/articles/voa/1011699.md)
@@ -598,6 +600,4 @@
 10-7 [聿文视界：从任志强到朱恒鹏，中共官员“非议习”禁而不绝](/articles/voa/1011995.md)
 
 10-7 [台湾：总统国庆演讲后 中国可能宣布于周边军演](/articles/voa/1011996.md)
-
-10-7 [菲律宾与韩国承诺加强防务合作 双边关系升级为战略伙伴关系](/articles/voa/1011997.md)
 
