--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-19 [“雨伞革命”十年后，海外香港离散社群继续为香港的未来抗争](/articles/voa/1011696.md)
+
 10-19 [新西兰加大力度反中共干涉 不再允许五星红旗满天飞](/articles/voa/1011697.md)
 
 10-19 [金正恩视察前线部队，再称韩国是一个“敌对外国”并威胁“进攻性”打击](/articles/voa/1011698.md)
@@ -598,6 +600,4 @@
 10-7 [飓风米尔顿正朝主要人口中心前进 佛罗里达州为大规模撤离做好准备](/articles/voa/1011994.md)
 
 10-7 [聿文视界：从任志强到朱恒鹏，中共官员“非议习”禁而不绝](/articles/voa/1011995.md)
-
-10-7 [台湾：总统国庆演讲后 中国可能宣布于周边军演](/articles/voa/1011996.md)
 
