--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-19 [特朗普会是孤立主义者吗？](/articles/voa/1011693.md)
+
+10-19 [拜登访德，重点关注中东和乌克兰问题](/articles/voa/1011694.md)
+
+10-19 [“雨伞革命”十年后，海外香港离散社群继续为香港的未来抗争](/articles/voa/1011695.md)
+
 10-19 [“雨伞革命”十年后，海外香港离散社群继续为香港的未来抗争](/articles/voa/1011696.md)
 
 10-19 [新西兰加大力度反中共干涉 不再允许五星红旗满天飞](/articles/voa/1011697.md)
@@ -594,10 +600,4 @@
 10-7 [鱼叉导弹、M1A2T将陆续报到 大幅提升台湾防御能力](/articles/voa/1011991.md)
 
 10-7 [哈马斯袭击以色列一周年，以军对加沙全境哈马斯目标和黎巴嫩境内真主党目标实施大规模空袭](/articles/voa/1011992.md)
-
-10-7 [乔·拜登总统纪念10月7日袭击事件一周年的声明](/articles/voa/1011993.md)
-
-10-7 [飓风米尔顿正朝主要人口中心前进 佛罗里达州为大规模撤离做好准备](/articles/voa/1011994.md)
-
-10-7 [聿文视界：从任志强到朱恒鹏，中共官员“非议习”禁而不绝](/articles/voa/1011995.md)
 
