--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-19 [易富贤: 中国在人口危机上拔剑四顾心茫然](/articles/voa/1011689.md)
+
+10-19 [美国领导多国对朝鲜实施制裁](/articles/voa/1011690.md)
+
+10-19 [美国副国务卿坎贝尔敦促加强美日国防合作](/articles/voa/1011691.md)
+
 10-19 [古巴在遭遇大规模停电后关闭学校和工作场所](/articles/voa/1011692.md)
 
 10-19 [特朗普会是孤立主义者吗？](/articles/voa/1011693.md)
@@ -594,10 +600,4 @@
 10-8 [俄乌互相袭击对方关键军事设施，泽连斯基说战争进入“非常重要” 阶段](/articles/voa/1011987.md)
 
 10-8 [普京生日当天，俄主要电视广播官媒遭大规模黑客网攻 网站服务瘫痪](/articles/voa/1011988.md)
-
-10-8 [以色列驻台代表强调以台关系密切，但拒谈黎巴嫩传呼机爆炸事件](/articles/voa/1011989.md)
-
-10-7 [教宗批评国际社会在制止中东战争上的“可耻的无能”](/articles/voa/1011990.md)
-
-10-7 [鱼叉导弹、M1A2T将陆续报到 大幅提升台湾防御能力](/articles/voa/1011991.md)
 
