--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+10-19 [廉价中国造竞选商品冲击美国本土企业，引发经济与政治双重争议](/articles/voa/1011682.md)
+
+10-19 [特朗普称如果中国“进入”台湾 将对中国征收150%至200%的关税](/articles/voa/1011683.md)
+
+10-19 [中国无人机制造商大疆因被列入“黑名单”对五角大楼提起诉讼](/articles/voa/1011684.md)
+
 10-19 [俄罗斯归还501名士兵尸体；西方盟友考虑泽连斯基的胜利计划](/articles/voa/1011685.md)
 
 10-19 [真主党在哈马斯领导人被杀后誓言升级战争](/articles/voa/1011686.md)
@@ -594,10 +600,4 @@
 10-8 [美国在加沙战争一周年之际针对哈马斯国际筹款网络实施制裁](/articles/voa/1011980.md)
 
 10-8 [蔡英文卸任总统后首次出访 旨在加强台湾同中东欧国家关系](/articles/voa/1011981.md)
-
-10-8 [精神病院成“集中营”，洛杉矶民主人士曝光中共酷刑迫害 支持美众院通过《阻止中共法》](/articles/voa/1011982.md)
-
-10-8 [致命爆炸发生后,中国要求巴基斯坦确保其公民安全](/articles/voa/1011983.md)
-
-10-8 [文革结束近半世纪 背负杀人罪的老“红卫兵”呼吁更多同伴公开道歉](/articles/voa/1011984.md)
 
