--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-19 [中国在秘鲁建造的大型港口11月底将试运营上海航线](/articles/voa/1011680.md)
+
 10-19 [朝鲜称找到坠毁的韩国军用无人机 并警告若非用于空投传单“更严重”](/articles/voa/1011681.md)
 
 10-19 [廉价中国造竞选商品冲击美国本土企业，引发经济与政治双重争议](/articles/voa/1011682.md)
@@ -598,6 +600,4 @@
 10-8 [中国房市迎来“复苏”？ 分析人士：目前下定论还为时过早](/articles/voa/1011978.md)
 
 10-8 [佛罗里达州准备迎接飓风米尔顿的袭击](/articles/voa/1011979.md)
-
-10-8 [美国在加沙战争一周年之际针对哈马斯国际筹款网络实施制裁](/articles/voa/1011980.md)
 
