--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-19 [阿联酋斡旋 俄乌各自换回95名战俘](/articles/voa/1011678.md)
+
+10-19 [哈马斯领导人辛瓦尔丧生后 伊朗最高领袖哈梅内伊：哈马斯将继续存在](/articles/voa/1011679.md)
+
 10-19 [中国在秘鲁建造的大型港口11月底将试运营上海航线](/articles/voa/1011680.md)
 
 10-19 [朝鲜称找到坠毁的韩国军用无人机 并警告若非用于空投传单“更严重”](/articles/voa/1011681.md)
@@ -596,8 +600,4 @@
 10-8 [以哈冲突一周年 美国国会两党重申支持以色列](/articles/voa/1011976.md)
 
 10-8 [分析: 欧盟支持对中国电动汽车征收关税显示柏林影响力减弱](/articles/voa/1011977.md)
-
-10-8 [中国房市迎来“复苏”？ 分析人士：目前下定论还为时过早](/articles/voa/1011978.md)
-
-10-8 [佛罗里达州准备迎接飓风米尔顿的袭击](/articles/voa/1011979.md)
 
