--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-19 [英外相访华谈敏感话题 中方:台港不容干涉](/articles/dw/1023960.md)
+
 10-19 [朝鲜称发现坠毁韩国军用无人机](/articles/dw/1023961.md)
 
 10-19 [特朗普：若中国进入台湾 将征高额关税](/articles/dw/1023962.md)
@@ -598,6 +600,4 @@
 9-19 [纽约时报：位于匈牙利的BAC是以色列创办的幌子公司](/articles/dw/1024258.md)
 
 9-19 [X平台升级：部分巴西用户得以重新登录](/articles/dw/1024259.md)
-
-9-19 [泽连斯基：乌克兰“胜利计划“准备完备](/articles/dw/1024260.md)
 
