--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-19 [大疆向美国国防部提出诉讼](/articles/dw/1023958.md)
+
+10-19 [德国推出30项新措施吸引印度技术工人](/articles/dw/1023959.md)
+
 10-19 [英外相访华谈敏感话题 中方:台港不容干涉](/articles/dw/1023960.md)
 
 10-19 [朝鲜称发现坠毁韩国军用无人机](/articles/dw/1023961.md)
@@ -596,8 +600,4 @@
 9-19 [哈里斯、特朗普谁更受蓝领青睐？美最大工会不背书](/articles/dw/1024256.md)
 
 9-19 [联大决议：以色列一年内结束对巴勒斯坦占领](/articles/dw/1024257.md)
-
-9-19 [纽约时报：位于匈牙利的BAC是以色列创办的幌子公司](/articles/dw/1024258.md)
-
-9-19 [X平台升级：部分巴西用户得以重新登录](/articles/dw/1024259.md)
 
