--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-20 [英国外交大臣拉米：与中方讨论了人权和乌克兰问题](/articles/voa/1011674.md)
+
 10-19 [菲律宾外长呼吁东盟在南中国海主权纠纷问题上多多发声](/articles/voa/1011675.md)
 
 10-19 [围台军演和习的两岸融合 专家：中共软硬兼施不合台湾民意](/articles/voa/1011676.md)
@@ -598,6 +600,4 @@
 10-8 [缅甸前执政党高级成员在狱中死亡](/articles/voa/1011972.md)
 
 10-8 [中国将在股市强劲反弹后进一步完善刺激计划](/articles/voa/1011973.md)
-
-10-8 [联合国就日益严重的东南亚网络诈骗团伙的技术威胁发出警告](/articles/voa/1011974.md)
 
