--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-20 [旧闻评论｜能抵制司马南，为啥不能抵制杨笠？](/articles/cdt/336266.md)
+
 10-19 [昌记负食｜回人大记](/articles/cdt/336268.md)
 
 10-19 [【CDT周报】第191期：我们想要好好说话不说“黑话烂梗”，可您不让啊](/articles/cdt/336285.md)
@@ -598,6 +600,4 @@
 9-12 [知识分子｜揭秘“人骨工厂”，医学需求如何催生地下罪恶产业？](/articles/cdt/337179.md)
 
 9-12 [每日一语 2024.9.11](/articles/cdt/337186.md)
-
-9-11 [单读｜不断搬家，不断“失学”，“旧改”中的孩子该如何告别家园？](/articles/cdt/337188.md)
 
