--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-20 [【重温】维吾尔学者伊力哈木·土赫提被捕十周年：2014年分裂国家案辩护词](/articles/cdt/336264.md)
+
 10-20 [旧闻评论｜能抵制司马南，为啥不能抵制杨笠？](/articles/cdt/336266.md)
 
 10-19 [昌记负食｜回人大记](/articles/cdt/336268.md)
@@ -598,6 +600,4 @@
 9-12 [大象公社｜关于中国足球，说几句阅后即焚的话](/articles/cdt/337177.md)
 
 9-12 [知识分子｜揭秘“人骨工厂”，医学需求如何催生地下罪恶产业？](/articles/cdt/337179.md)
-
-9-12 [每日一语 2024.9.11](/articles/cdt/337186.md)
 
