--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-20 [数据显示东南亚受到美国对维吾尔族强迫劳动的贸易限制的主要冲击](/articles/voa/1011671.md)
+
 10-20 [乌克兰发布的视频据称显示朝鲜士兵在俄罗斯](/articles/voa/1011672.md)
 
 10-20 [中国网约车司机在困苦挣扎中求生](/articles/voa/1011673.md)
@@ -598,6 +600,4 @@
 10-8 [美台金融桌面演习 专家：习近平要让赖清德无法连任，一年半后即可能开始破坏台湾金融市场稳定](/articles/voa/1011969.md)
 
 10-8 [以色列在哈马斯恐袭一周年之际袭击加沙和黎巴嫩](/articles/voa/1011970.md)
-
-10-8 [菲律宾与盟友举行海军演习 地区紧张局势持续发酵](/articles/voa/1011971.md)
 
