--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,16 @@
 德国之声
 ------
 
+10-20 [译者贝茨：让德国读者了解中国文学](/articles/dw/1023950.md)
+
+10-20 [荷兰监狱迎倒闭潮 是否意味治安变好？](/articles/dw/1023951.md)
+
+10-20 [哈里斯 vs. 特朗普：在堕胎、以色列、俄乌等关键议题上各持何种立场？](/articles/dw/1023952.md)
+
+10-20 [意大利在阿尔巴尼亚的难民中心开始启用](/articles/dw/1023953.md)
+
+10-20 [长平观察：今年的诺贝尔经济学奖，十年前就让中共不高兴了](/articles/dw/1023954.md)
+
 10-19 [中国公布两用物项出口管制条例](/articles/dw/1023955.md)
 
 10-19 [中资控股秘鲁巨型港口拟11月试运营](/articles/dw/1023956.md)
@@ -590,14 +600,4 @@
 9-20 [俄乌交换战俘 206人获释](/articles/dw/1024248.md)
 
 9-20 [汉莎考虑停飞法兰克福北京航线 决定10月作出](/articles/dw/1024249.md)
-
-9-20 [中国宣布将逐步恢复日本水产品进口](/articles/dw/1024250.md)
-
-9-20 [巴西最高法警告马斯克：违规将遭重罚](/articles/dw/1024251.md)
-
-9-20 [開放兩岸同婚 台灣：兼顧國家安全](/articles/dw/1024252.md)
-
-9-19 [德国拟向乌克兰追加4亿欧元军事援助](/articles/dw/1024253.md)
-
-9-19 [消息人士：上汽大众考虑关闭南京工厂](/articles/dw/1024254.md)
 
