--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-20 [每日一语 2024.10.19](/articles/cdt/336256.md)
+
+10-20 [UltraViolet 紫外｜致新同学：当多元性别青年初入大学校园](/articles/cdt/336259.md)
+
 10-20 [Economics Goethe｜阿西莫格鲁演讲：国家为何失败？（译文删减的中国部分已补全）](/articles/cdt/336261.md)
 
 10-20 [【重温】维吾尔学者伊力哈木·土赫提被捕十周年：2014年分裂国家案辩护词](/articles/cdt/336264.md)
@@ -596,8 +600,4 @@
 9-13 [ida｜一个公众号的倒掉](/articles/cdt/337161.md)
 
 9-12 [六神磊磊读金庸｜ 足球是一个逆子](/articles/cdt/337165.md)
-
-9-12 [建设性意见｜起诉微信勇气可嘉，但提现收费的另有其人啊同学](/articles/cdt/337169.md)
-
-9-12 [三辉图书｜高墙内，一颗鸡蛋的自白](/articles/cdt/337173.md)
 
