--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-20 [前将军普拉博沃就任印度尼西亚总统 寻求更显著国际地位](/articles/voa/1011664.md)
+
 10-20 [中国加强“两用物项”出口管制 称不影响国际经贸往来及合作](/articles/voa/1011665.md)
 
 10-20 [美防长呼吁以色列减少对黎巴嫩的空袭](/articles/voa/1011666.md)
@@ -598,6 +600,4 @@
 10-8 [文革结束近半世纪 背负杀人罪的老“红卫兵”呼吁更多同伴公开道歉](/articles/voa/1011962.md)
 
 10-8 [矛头指向法国 中国宣布对欧盟白兰地实施反倾销措施](/articles/voa/1011963.md)
-
-10-8 [韩国防部长：朝鲜士兵极有可能在乌克兰战场丧生](/articles/voa/1011964.md)
 
