--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-20 [以军继续两线作战，袭击贝鲁特真主党情报总部，空袭加沙哈马斯](/articles/voa/1011662.md)
+
 10-20 [在俄罗斯涉嫌干预的阴影下 摩尔多瓦举行总统大选及欧盟公投](/articles/voa/1011663.md)
 
 10-20 [前将军普拉博沃就任印度尼西亚总统 寻求更显著国际地位](/articles/voa/1011664.md)
@@ -598,6 +600,4 @@
 10-8 [菲中再起海上对抗冲突，中国海警船动用水炮](/articles/voa/1011960.md)
 
 10-8 [以宣布在黎西南部展开地面军事行动，真主党二号人物称愿谈判停火](/articles/voa/1011961.md)
-
-10-8 [文革结束近半世纪 背负杀人罪的老“红卫兵”呼吁更多同伴公开道歉](/articles/voa/1011962.md)
 
