--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-20 [普拉博沃正式就任印尼新总统](/articles/dw/1023947.md)
+
 10-20 [G7防长关切台海局势 台外交部发文致谢](/articles/dw/1023948.md)
 
 10-20 [卡玛拉·哈里斯 vs. 特朗普：在堕胎、以色列、俄乌等关键议题上各持何种立场？](/articles/dw/1023949.md)
@@ -598,6 +600,4 @@
 9-20 [香港新煽动罪作出首两例判决](/articles/dw/1024245.md)
 
 9-20 [路透社：习近平主席应该向美联储主席鲍威尔致以诚挚谢意](/articles/dw/1024246.md)
-
-9-20 [媒体：大众新疆工厂人权报告存在严重瑕疵](/articles/dw/1024247.md)
 
