--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-21 [从起诉国防部到争李锐日记到状告美国人，中共及中企利用美国法律维护其利益](/articles/voa/1011658.md)
+
+10-21 [普京高调主办金砖国家峰会，试图告诉西方他并不孤立](/articles/voa/1011659.md)
+
 10-20 [靖国神社秋祭再引中国不满 在日华人：首相对中强硬才能保障人权](/articles/voa/1011660.md)
 
 10-20 [亲俄博主称俄军猛攻乌东塞利多韦市，乌军空袭俄一处军用机场和军工企业](/articles/voa/1011661.md)
@@ -596,8 +600,4 @@
 10-9 [比亚迪在印度设厂计划遇挑战，新德里对中企投资严格设限](/articles/voa/1011956.md)
 
 10-9 [美国鞋业巨头斯凯奇立足新疆受到人权倡导者批评](/articles/voa/1011957.md)
-
-10-8 [俄乌交战胶着复杂，泽连斯基：要通过实力逼迫普京接受和平](/articles/voa/1011958.md)
-
-10-8 [日本前首相麻生太郎称台湾为重要“国家”，恐遭北京强烈反弹](/articles/voa/1011959.md)
 
