--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-21 [印尼新总统宣布该国历史上最庞大的内阁](/articles/voa/1011657.md)
+
 10-21 [从起诉国防部到争李锐日记到状告美国人，中共及中企利用美国法律维护其利益](/articles/voa/1011658.md)
 
 10-21 [普京高调主办金砖国家峰会，试图告诉西方他并不孤立](/articles/voa/1011659.md)
@@ -598,6 +600,4 @@
 10-9 [北京有信心市场不买账，失望情绪从中国蔓延全球](/articles/voa/1011955.md)
 
 10-9 [比亚迪在印度设厂计划遇挑战，新德里对中企投资严格设限](/articles/voa/1011956.md)
-
-10-9 [美国鞋业巨头斯凯奇立足新疆受到人权倡导者批评](/articles/voa/1011957.md)
 
