--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,14 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-21 [情况有点复杂｜一家开业当天被端掉、被隐入地下的书店](/articles/cdt/336244.md)
+
+10-21 [唐师三百手｜抵制杨笠的人，大概也在愐怀辛瓦尔](/articles/cdt/336246.md)
+
+10-21 [刑辩中坚｜沈亚川：每个法院都应该有个大法庭——兼论近亲属在庭旁听权的法律意义](/articles/cdt/336248.md)
+
+10-21 [每日一语 2024.10.20](/articles/cdt/336250.md)
+
 10-20 [每日一语 2024.10.19](/articles/cdt/336256.md)
 
 10-20 [UltraViolet 紫外｜致新同学：当多元性别青年初入大学校园](/articles/cdt/336259.md)
@@ -592,12 +600,4 @@
 9-13 [看客inSight｜农村女性的墓碑上，没有自己的姓名](/articles/cdt/337148.md)
 
 9-13 [孙立平｜过剩产能出清之日，就是真正拐点到来之时](/articles/cdt/337153.md)
-
-9-13 [每日一语 2024.9.12](/articles/cdt/337154.md)
-
-9-13 [冷杉RECORD｜滞销书背后：没有理想的人不伤心](/articles/cdt/337155.md)
-
-9-13 [世界音乐｜被剥夺说话权的阿富汗女人，正在用歌声回击这一切…](/articles/cdt/337156.md)
-
-9-13 [ida｜一个公众号的倒掉](/articles/cdt/337161.md)
 
