--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-21 [美国加拿大军舰在中国军演后穿越台湾海峡](/articles/voa/1011653.md)
+
+10-21 [乌克兰总统泽连斯基寻求对朝鲜参加俄乌战争的强烈反应](/articles/voa/1011654.md)
+
 10-21 [住房、通膨、医疗保险：一次看懂特朗普与哈里斯的社会福利政策之争](/articles/voa/1011655.md)
 
 10-21 [古巴全岛停电几天后仍未完全恢复供电，民众苦苦挣扎](/articles/voa/1011656.md)
@@ -596,8 +600,4 @@
 10-9 [马尔代夫重新拥抱印度，以缓解中国债务紧箍](/articles/voa/1011951.md)
 
 10-9 [内塔尼亚胡：真主党负责人的继任者死亡](/articles/voa/1011952.md)
-
-10-9 [因飓风逼近佛罗里达，拜登总统取消访问德国与安哥拉的计划](/articles/voa/1011953.md)
-
-10-9 [中国股市节后复盘首日未“狂飙”，发改委政策低于市场预期](/articles/voa/1011954.md)
 
