--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-21 [中國軍演一週後 美加軍艦穿越台灣海峽](/articles/dw/1023945.md)
+
+10-21 [特朗普、哈里斯会如何对待中国？](/articles/dw/1023946.md)
+
 10-20 [普拉博沃正式就任印尼新总统](/articles/dw/1023947.md)
 
 10-20 [G7防长关切台海局势 台外交部发文致谢](/articles/dw/1023948.md)
@@ -596,8 +600,4 @@
 9-20 [冯德莱恩第八次访问基辅 许诺350亿欧元贷款](/articles/dw/1024243.md)
 
 9-20 [冯德莱恩第八次访问基辅](/articles/dw/1024244.md)
-
-9-20 [香港新煽动罪作出首两例判决](/articles/dw/1024245.md)
-
-9-20 [路透社：习近平主席应该向美联储主席鲍威尔致以诚挚谢意](/articles/dw/1024246.md)
 
