--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-21 [中国启动救市 23家上市公司已利用“股票回购增持再贷款”计划](/articles/voa/1011651.md)
+
 10-21 [中国再下调关键贷款利率 寻求提振经济](/articles/voa/1011652.md)
 
 10-21 [美国加拿大军舰在中国军演后穿越台湾海峡](/articles/voa/1011653.md)
@@ -598,6 +600,4 @@
 10-9 [马尔代夫重新拥抱印度，以缓解中国债务紧箍](/articles/voa/1011949.md)
 
 10-9 [布林肯前往老挝出席东盟和东亚峰会](/articles/voa/1011950.md)
-
-10-9 [马尔代夫重新拥抱印度，以缓解中国债务紧箍](/articles/voa/1011951.md)
 
