--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-21 [信息“禁令”、限制直播：中国对租借大熊猫有哪些条件](/articles/nyt/1042294.md)
+
 10-21 [中东局势正发生转变，以色列被“抛弃”？](/articles/nyt/1042295.md)
 
 10-21 [辛瓦尔的最后时刻：逃亡、负伤、死前仍不忘挑衅](/articles/nyt/1042296.md)
@@ -598,6 +600,4 @@
 7-11 [中印边境争端：为何两国因“不毛之地”纷争不休](/articles/nyt/1042592.md)
 
 7-11 [我爱拜登，但他是时候退出了](/articles/nyt/1042593.md)
-
-7-11 [北约首次公开谴责中国为俄罗斯提供军事支持](/articles/nyt/1042594.md)
 
