--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-21 [沙特阿美首席执行官：对中国石油需求持“相当乐观”态度](/articles/voa/1011649.md)
+
+10-21 [亚洲市场波动 消化中国降息举措](/articles/voa/1011650.md)
+
 10-21 [中国启动救市 23家上市公司已利用“股票回购增持再贷款”计划](/articles/voa/1011651.md)
 
 10-21 [中国再下调关键贷款利率 寻求提振经济](/articles/voa/1011652.md)
@@ -596,8 +600,4 @@
 10-9 [世界媒体看中国：中国对台威胁有多强](/articles/voa/1011947.md)
 
 10-9 [TikTok被13个州和首都华盛顿特区起诉,指控其伤害未成年人](/articles/voa/1011948.md)
-
-10-9 [马尔代夫重新拥抱印度，以缓解中国债务紧箍](/articles/voa/1011949.md)
-
-10-9 [布林肯前往老挝出席东盟和东亚峰会](/articles/voa/1011950.md)
 
