--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+10-21 [辛瓦尔之死对哈马斯、加沙和黎巴嫩意味着什么？](/articles/dw/1023941.md)
+
+10-21 [客座评论：朝韩会打起来吗？](/articles/dw/1023942.md)
+
+10-21 [专访：译者贝茨-让德国读者了解中国文学](/articles/dw/1023943.md)
+
+10-21 [蔡英文訪布魯塞爾：現場歐洲議員怎麼說？](/articles/dw/1023944.md)
+
 10-21 [中國軍演一週後 美加軍艦穿越台灣海峽](/articles/dw/1023945.md)
 
 10-21 [特朗普、哈里斯会如何对待中国？](/articles/dw/1023946.md)
@@ -592,12 +600,4 @@
 9-21 [遭朝鲜驱逐的美国士兵认罪后获释](/articles/dw/1024239.md)
 
 9-21 [特朗普7月遇袭案：美国特勤局公开具体失误](/articles/dw/1024240.md)
-
-9-20 [阿姆斯特丹被游客挤爆 怎么办？](/articles/dw/1024241.md)
-
-9-20 [日外相：将就日本男童遇袭身亡一事派副外相访华](/articles/dw/1024242.md)
-
-9-20 [冯德莱恩第八次访问基辅 许诺350亿欧元贷款](/articles/dw/1024243.md)
-
-9-20 [冯德莱恩第八次访问基辅](/articles/dw/1024244.md)
 
