--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-21 [基本常识｜亲生母亲卖孩子是个无解难题](/articles/cdt/336242.md)
+
 10-21 [情况有点复杂｜一家开业当天被端掉、被隐入地下的书店](/articles/cdt/336244.md)
 
 10-21 [唐师三百手｜抵制杨笠的人，大概也在愐怀辛瓦尔](/articles/cdt/336246.md)
@@ -598,6 +600,4 @@
 9-16 [【CDT关注】NPR｜一位高调批评中共的异议人士会设下骗局吗？](/articles/cdt/337146.md)
 
 9-13 [看客inSight｜农村女性的墓碑上，没有自己的姓名](/articles/cdt/337148.md)
-
-9-13 [孙立平｜过剩产能出清之日，就是真正拐点到来之时](/articles/cdt/337153.md)
 
