--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-21 [现实的模样｜“臭肉事件”的火，会继续烧下去吗？](/articles/cdt/336237.md)
+
+10-21 [三联生活周刊｜一个三十四年汽车老将的“仗义执言”](/articles/cdt/336239.md)
+
 10-21 [基本常识｜亲生母亲卖孩子是个无解难题](/articles/cdt/336242.md)
 
 10-21 [情况有点复杂｜一家开业当天被端掉、被隐入地下的书店](/articles/cdt/336244.md)
@@ -596,8 +600,4 @@
 9-14 [【404文库】“时代在召唤中国的马丁路德金。今天的社会需要不同阶层的沟通谈判机制！”（外二篇）](/articles/cdt/337142.md)
 
 9-16 [【CDT关注】自由亚洲｜刘晓波铜像爱尔兰高威大学揭幕 校方无惧中共压力创全球大学先河](/articles/cdt/337144.md)
-
-9-16 [【CDT关注】NPR｜一位高调批评中共的异议人士会设下骗局吗？](/articles/cdt/337146.md)
-
-9-13 [看客inSight｜农村女性的墓碑上，没有自己的姓名](/articles/cdt/337148.md)
 
