--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-21 [韩国指朝鲜派兵增援俄侵乌战争 北约回应](/articles/dw/1023940.md)
+
 10-21 [辛瓦尔之死对哈马斯、加沙和黎巴嫩意味着什么？](/articles/dw/1023941.md)
 
 10-21 [客座评论：朝韩会打起来吗？](/articles/dw/1023942.md)
@@ -598,6 +600,4 @@
 9-21 [泽连斯基：美英未同意用远程武器打击俄境内目标](/articles/dw/1024238.md)
 
 9-21 [遭朝鲜驱逐的美国士兵认罪后获释](/articles/dw/1024239.md)
-
-9-21 [特朗普7月遇袭案：美国特勤局公开具体失误](/articles/dw/1024240.md)
 
