--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-21 [韩国召见俄驻韩大使，抗议朝鲜士兵进入俄罗斯准备赴乌参战](/articles/voa/1011644.md)
+
+10-21 [印中就边境地区巡逻安排达成协议 为最终解决边境冲突铺路](/articles/voa/1011645.md)
+
 10-21 [国事光析：中国股市的“大炼钢铁”能够带来经济大跃进吗？](/articles/voa/1011646.md)
 
 10-21 [彭博：台湾在AI需求激增之下对核能表达“开放”态度](/articles/voa/1011647.md)
@@ -596,8 +600,4 @@
 10-9 [联调局逮捕一名阿富汗男子，当局指控其策划在美国选举日袭击人群](/articles/voa/1011942.md)
 
 10-9 [双十节前美国重申和平解决台海纠纷；中共紧盯台湾总统讲话](/articles/voa/1011943.md)
-
-10-9 [美国官员称中国过度供应锂以消除竞争](/articles/voa/1011944.md)
-
-10-9 [马尔代夫亲中总统访印寻求关系突破](/articles/voa/1011945.md)
 
