--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-22 [每日一语 2024.10.21](/articles/cdt/336225.md)
+
+10-21 [玖奌杂货店｜为什么他们不羞愧？](/articles/cdt/336228.md)
+
 10-21 [亮见｜机关食堂为啥就没有臭肉？](/articles/cdt/336230.md)
 
 10-21 [有杏书店｜珍惜还在公共表达的人](/articles/cdt/336232.md)
@@ -596,8 +600,4 @@
 9-14 [小鸮｜想念雪琴](/articles/cdt/337127.md)
 
 9-14 [维权网｜黄雪琴辩护人徐凯律师紧急呼吁：黄雪琴案二审被违法秘密宣判！](/articles/cdt/337133.md)
-
-9-14 [【旧文重温】【404文库】曹林｜延迟退休可能是对一代人的违约](/articles/cdt/337134.md)
-
-9-14 [每日一语 2024.9.13](/articles/cdt/337135.md)
 
