--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-22 [金砖国家喀山峰会：全球变局下印度和中国能否弥合分歧？](/articles/voa/1011640.md)
+
 10-21 [国会民主党领袖呼吁美企拒绝香港政府下架海外港人媒体指令](/articles/voa/1011641.md)
 
 10-21 [越南国会选举人民军大将梁强担任国家主席，最高领导层或已达成权力分享妥协](/articles/voa/1011642.md)
@@ -598,6 +600,4 @@
 10-9 [情报官员：中俄等美国对手正试图利用虚假信息干预国会竞选](/articles/voa/1011938.md)
 
 10-9 [美国公告称伊朗黑客攻击政治竞选](/articles/voa/1011939.md)
-
-10-9 [佛罗里达州准备应对飓风米尔顿灾难性登陆](/articles/voa/1011940.md)
 
