--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-22 [美特使在贝鲁特与黎巴嫩官员会谈 推动解决以黎边境冲突](/articles/voa/1011638.md)
+
+10-22 [俄欧紧张局势升高之际，德国为北约新波罗的海海军战术总部举行落成典礼](/articles/voa/1011639.md)
+
 10-22 [金砖国家喀山峰会：全球变局下印度和中国能否弥合分歧？](/articles/voa/1011640.md)
 
 10-21 [国会民主党领袖呼吁美企拒绝香港政府下架海外港人媒体指令](/articles/voa/1011641.md)
@@ -596,8 +600,4 @@
 10-9 [长命百岁将是常态？专家：不要指望人类寿命会有太多增长](/articles/voa/1011936.md)
 
 10-9 [直击大选假信息：批美挺中 AI俄罗斯带货美女从中国转战东南亚](/articles/voa/1011937.md)
-
-10-9 [情报官员：中俄等美国对手正试图利用虚假信息干预国会竞选](/articles/voa/1011938.md)
-
-10-9 [美国公告称伊朗黑客攻击政治竞选](/articles/voa/1011939.md)
 
