--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-22 [FBI调查中国投资公司,中国投资人表示习以为常](/articles/voa/1011637.md)
+
 10-22 [美特使在贝鲁特与黎巴嫩官员会谈 推动解决以黎边境冲突](/articles/voa/1011638.md)
 
 10-22 [俄欧紧张局势升高之际，德国为北约新波罗的海海军战术总部举行落成典礼](/articles/voa/1011639.md)
@@ -598,6 +600,4 @@
 10-9 [台湾国庆演说前夕回应“祖国论” 中国指责赖清德加剧紧张局势](/articles/voa/1011935.md)
 
 10-9 [长命百岁将是常态？专家：不要指望人类寿命会有太多增长](/articles/voa/1011936.md)
-
-10-9 [直击大选假信息：批美挺中 AI俄罗斯带货美女从中国转战东南亚](/articles/voa/1011937.md)
 
