--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-22 [喀山金砖峰会将临，印度如何制衡中国？](/articles/dw/1023933.md)
+
 10-22 [美加軍艦穿越台海後 中國舉行實彈射擊](/articles/dw/1023934.md)
 
 10-21 [军演后 美中程导弹系统顺便部署在菲律宾](/articles/dw/1023935.md)
@@ -598,6 +600,4 @@
 9-22 [图林根州露天泳池邀请四脚“毛孩子”参加传统“封池”仪式](/articles/dw/1024231.md)
 
 9-22 [国际秩序是否会被西方的双重标准所颠覆?](/articles/dw/1024232.md)
-
-9-22 [调研：半数德国车主“信不过”中国车](/articles/dw/1024233.md)
 
