--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-22 [贺锦丽和特朗普为争取摇摆选民展开“最后较量”](/articles/nyt/1042292.md)
+
 10-22 [中国人为何涌入股市“赌场”](/articles/nyt/1042293.md)
 
 10-21 [信息“禁令”、限制直播：中国对租借大熊猫有哪些条件](/articles/nyt/1042294.md)
@@ -598,6 +600,4 @@
 7-12 [化工油罐车混运食用油，中国再爆食品安全丑闻](/articles/nyt/1042590.md)
 
 7-12 [德国将弃用华为和中兴部件参与5G网络建设](/articles/nyt/1042591.md)
-
-7-11 [中印边境争端：为何两国因“不毛之地”纷争不休](/articles/nyt/1042592.md)
 
