--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-22 [飓风“奥斯卡”横扫古巴酿6死 大规模停电瘫痪城市、引发抗议](/articles/voa/1011625.md)
+
 10-22 [中国奢侈品市场急剧降温：全球巨头LVMH销量滑坡，行业复苏前景不明](/articles/voa/1011626.md)
 
 10-22 [美国表示“将为乌克兰提供所需”，以继续与俄罗斯作战](/articles/voa/1011627.md)
@@ -598,6 +600,4 @@
 10-10 [教宗方济各计划周五会晤泽连斯基 试图缓和双方关系](/articles/voa/1011923.md)
 
 10-10 [欧委会主席冯德莱恩抨击匈牙利的俄中政策危及欧盟安全](/articles/voa/1011924.md)
-
-10-10 [王毅与日本新外相岩屋毅通电话，“期待”中日关系有新发展](/articles/voa/1011925.md)
 
