--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-22 [澳洲欲向美國採購遠程飛彈 強化嚇阻力](/articles/dw/1023931.md)
+
+10-22 [柏林电视塔55岁啦！](/articles/dw/1023932.md)
+
 10-22 [喀山金砖峰会将临，印度如何制衡中国？](/articles/dw/1023933.md)
 
 10-22 [美加軍艦穿越台海後 中國舉行實彈射擊](/articles/dw/1023934.md)
@@ -596,8 +600,4 @@
 9-22 [中国Gen Z新贵的奢侈时尚新风](/articles/dw/1024229.md)
 
 9-22 [汉诺威商用车展：中国电动卡车表现不俗](/articles/dw/1024230.md)
-
-9-22 [图林根州露天泳池邀请四脚“毛孩子”参加传统“封池”仪式](/articles/dw/1024231.md)
-
-9-22 [国际秩序是否会被西方的双重标准所颠覆?](/articles/dw/1024232.md)
 
