--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,10 @@
 纽约时报
 ------
 
+10-22 [美国政府机构会成为马斯克的“工具”吗](/articles/nyt/1042290.md)
+
+10-22 [金砖国家峰会：普京和习近平打的什么“算盘”](/articles/nyt/1042291.md)
+
 10-22 [贺锦丽和特朗普为争取摇摆选民展开“最后较量”](/articles/nyt/1042292.md)
 
 10-22 [中国人为何涌入股市“赌场”](/articles/nyt/1042293.md)
@@ -596,8 +600,4 @@
 7-12 [美国将对在中国制造的墨西哥金属征收关税](/articles/nyt/1042588.md)
 
 7-12 [北约对中国的公开谴责意味着什么](/articles/nyt/1042589.md)
-
-7-12 [化工油罐车混运食用油，中国再爆食品安全丑闻](/articles/nyt/1042590.md)
-
-7-12 [德国将弃用华为和中兴部件参与5G网络建设](/articles/nyt/1042591.md)
 
