--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-22 [台湾再次拒绝南非将代表处迁出比勒陀利亚的要求](/articles/voa/1011620.md)
+
+10-22 [中国第三季度因自然灾害造成的经济损失激增](/articles/voa/1011621.md)
+
 10-22 [台湾称中国实弹演习可能是旨在扩大“威慑”效应](/articles/voa/1011622.md)
 
 10-22 [美国很快将限制对中国的人工智能投资](/articles/voa/1011623.md)
@@ -596,8 +600,4 @@
 10-10 [美国大选临近 民主共和两党试图预防舞弊指控](/articles/voa/1011918.md)
 
 10-10 [墨西哥：在美中贸易战中将与美国站在一边](/articles/voa/1011919.md)
-
-10-10 [台湾在敏感水域扣押中国渔船](/articles/voa/1011920.md)
-
-10-10 [拜登和内塔尼亚胡在以色列继续袭击加沙和黎巴嫩之际通电话](/articles/voa/1011921.md)
 
