--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-22 [中国经济拖累白酒巨头茅台](/articles/dw/1023928.md)
+
+10-22 [长平漫游：“我要吃面包”](/articles/dw/1023929.md)
+
 10-22 [德国总理肖尔茨：不应惧怕来自中国电动车的竞争](/articles/dw/1023930.md)
 
 10-22 [澳洲欲向美國採購遠程飛彈 強化嚇阻力](/articles/dw/1023931.md)
@@ -596,8 +600,4 @@
 9-22 [报复以军空袭 真主党向以色列发射火箭弹](/articles/dw/1024226.md)
 
 9-22 [法国新政府宣布向右转](/articles/dw/1024227.md)
-
-9-22 [韩国：非婚生子女家庭越来越多](/articles/dw/1024228.md)
-
-9-22 [中国Gen Z新贵的奢侈时尚新风](/articles/dw/1024229.md)
 
