--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-22 [德国若想去风险成功 印度是关键](/articles/dw/1023926.md)
+
 10-22 [奥巴马、特朗普、拜登：美国经济真的在乎谁当总统吗？](/articles/dw/1023927.md)
 
 10-22 [中国经济拖累白酒巨头茅台](/articles/dw/1023928.md)
@@ -598,6 +600,4 @@
 9-22 [未关麦被直播 拜登称中国在“考验”我们](/articles/dw/1024224.md)
 
 9-22 [未关麦克被直播 拜登称中国在“考验”我们](/articles/dw/1024225.md)
-
-9-22 [报复以军空袭 真主党向以色列发射火箭弹](/articles/dw/1024226.md)
 
