--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-22 [因应解放军封锁，台湾强化战时粮食等战略物资储备](/articles/voa/1011617.md)
+
 10-22 [中俄伊朝新“邪恶轴心”有多危险？](/articles/voa/1011618.md)
 
 10-22 [聿文视界：诺贝尔经济学奖得主忠告中国：没有政治包容便没有经济未来](/articles/voa/1011619.md)
@@ -598,6 +600,4 @@
 10-10 [观察人士：中国制造的战斗机在缅甸军方的致命空袭中发挥关键作用](/articles/voa/1011915.md)
 
 10-10 [人权观察报告：中国试图噤声在日本的异议人士](/articles/voa/1011916.md)
-
-10-10 [泽连斯基将在巴黎会晤马克龙；马克龙探访在法受训乌军部队。](/articles/voa/1011917.md)
 
