--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-22 [谷雨实验室｜史铁生救不了年轻人](/articles/cdt/336215.md)
+
 10-22 [【404文库】凤凰网｜第一批房价下跌的夫妻，已经离婚了](/articles/cdt/336218.md)
 
 10-22 [律侠普法｜生育问题启动抽样调查：让年轻小伙敢结婚，让年轻女人敢怀孕](/articles/cdt/336220.md)
@@ -598,6 +600,4 @@
 9-15 [歪脑｜香港记协主席郑嘉如被WSJ解雇：在华外媒难以守住的新闻自由和无法免疫的自我审查](/articles/cdt/337110.md)
 
 9-15 [鸡蛋bot｜雪琴的这条路](/articles/cdt/337112.md)
-
-10-1 [【中国哭墙】理论是灰色的，生命之树长青（9月1日-9月30日，2024年）](/articles/cdt/337119.md)
 
