--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-23 [欧洲议会批准向乌克兰提供以俄海外资产孳息做抵押的350亿欧元贷款](/articles/voa/1011613.md)
+
 10-22 [韩国表示将考虑向基辅提供杀伤性武器](/articles/voa/1011614.md)
 
 10-22 [中国政府与梵蒂冈续签倍受争议的主教任命临时协议](/articles/voa/1011615.md)
@@ -598,6 +600,4 @@
 10-10 [中国寻求加强与东盟经济联系 小马科斯提南中国海争端：不能假装一切都好](/articles/voa/1011911.md)
 
 10-10 [赖清德：中国无权代表台湾，双方应合作应对全球挑战](/articles/voa/1011912.md)
-
-10-10 [美国称台湾年度“双十”讲话不应成为中国军事施压的借口](/articles/voa/1011913.md)
 
