--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-23 [布林肯敦促内塔尼亚胡在哈马斯领导人死亡后达成加沙停火协议](/articles/voa/1011609.md)
+
 10-23 [帕劳海洋保育成就面临考验：扩大捕鱼范围引发争议](/articles/voa/1011610.md)
 
 10-23 [习近平会晤普京，称中俄是乱世中的“稳定力量”](/articles/voa/1011611.md)
@@ -598,6 +600,4 @@
 10-10 [赖清德国庆演说再论“中华民国”史 分析:走统独中间路线，抢国民党神主牌](/articles/voa/1011907.md)
 
 10-10 [逾200部中国电影今年勇闯台湾金马奖 独立影人盼被世界看见](/articles/voa/1011908.md)
-
-10-10 [以色列军方称已消灭一名在叙利亚泄漏情报的真主党成员](/articles/voa/1011909.md)
 
