--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-23 [中印就边境巡逻问题达成协议](/articles/nyt/1042289.md)
+
 10-22 [美国政府机构会成为马斯克的“工具”吗](/articles/nyt/1042290.md)
 
 10-22 [金砖国家峰会：普京和习近平打的什么“算盘”](/articles/nyt/1042291.md)
@@ -598,6 +600,4 @@
 7-12 [郭文贵命运等待陪审团裁决，涉嫌诈骗10亿美元](/articles/nyt/1042587.md)
 
 7-12 [美国将对在中国制造的墨西哥金属征收关税](/articles/nyt/1042588.md)
-
-7-12 [北约对中国的公开谴责意味着什么](/articles/nyt/1042589.md)
 
