--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-23 [大金砖峰会登场：普京会晤习近平与莫迪](/articles/dw/1023922.md)
+
 10-22 [俄罗斯总统普京主持大金砖峰会](/articles/dw/1023923.md)
 
 10-22 [中国称已与梵蒂冈协商将秘密协议再延期4年](/articles/dw/1023924.md)
@@ -598,6 +600,4 @@
 9-23 [研究:特朗普若当选 德国外贸将遭重创](/articles/dw/1024220.md)
 
 9-23 [德国选项党成为勃兰登堡州议会第二大党](/articles/dw/1024221.md)
-
-9-23 [以色列继续对真主党空袭 中国呼吁公民撤离以色列](/articles/dw/1024222.md)
 
