--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+10-23 [普京会见习近平，宣称将建立“公正的世界秩序”](/articles/nyt/1042286.md)
+
 10-23 [梵蒂冈与中国延长主教任命协议](/articles/nyt/1042287.md)
 
 10-23 [中国在台湾海峡举行实弹军事演习](/articles/nyt/1042288.md)
@@ -598,6 +600,4 @@
 7-14 [“美国受到了攻击”：还原特朗普集会遇袭现场](/articles/nyt/1042584.md)
 
 7-14 [特朗普遇刺后目前“安全”，枪手嫌疑人被击毙](/articles/nyt/1042585.md)
-
-7-12 [“谁说我必输无疑？”拜登姿态坚决，拒不退选](/articles/nyt/1042586.md)
 
