--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-23 [台湾国防部长：中共若封锁台湾将是战争行为](/articles/dw/1023916.md)
+
+10-23 [客座评论：习近平的退位和接班人问题](/articles/dw/1023917.md)
+
 10-23 [国际舆论评论金砖峰会：从单极世界向多极化发展](/articles/dw/1023918.md)
 
 10-23 [芬兰特产毒蘑菇](/articles/dw/1023919.md)
@@ -596,8 +600,4 @@
 9-24 [日童遇襲死亡案：日外相要求北京打擊反日言論](/articles/dw/1024214.md)
 
 9-23 [客座评论：宋彬彬之死与《我虽死去》](/articles/dw/1024215.md)
-
-9-23 [信奉马克思主义的迪萨纳亚克就任斯里兰卡总统](/articles/dw/1024216.md)
-
-9-23 [美国拟全面禁止联网汽车使用中国软硬件](/articles/dw/1024217.md)
 
