--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-23 [常识流通处｜为什么有这么多人共情辛瓦尔？](/articles/cdt/336164.md)
+
+10-23 [竹不倒｜彻底不在乎吃相了？普通人老百姓瑟瑟发抖](/articles/cdt/336166.md)
+
 10-23 [念个咒语会下雨｜普信男无法容忍杨笠的冒犯，却可以接受刘强东性侵](/articles/cdt/336175.md)
 
 10-23 [【立此存照、404文库】｜公安局原副局长涉黑恶犯罪，妻子、姐姐同为犯罪集团头目，警方征集线索最高奖10万](/articles/cdt/336176.md)
@@ -596,8 +600,4 @@
 9-15 [【异闻观止】国家安全部｜天降桃花运？小心是“桃花劫”](/articles/cdt/337094.md)
 
 9-15 [每日一语 2024.9.14](/articles/cdt/337096.md)
-
-9-15 [特正经的张某某｜贱民的胜利](/articles/cdt/337099.md)
-
-9-15 [自媒体文章精选｜人大报告揭示：哪些是相信遥遥领先的人](/articles/cdt/337101.md)
 
