--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-23 [朝鲜士兵在俄罗斯干什么？德外交部召见朝鲜代办](/articles/dw/1023914.md)
+
 10-23 [IMF下调中国经济增长预测 称刺激措施不足以提振消费](/articles/dw/1023915.md)
 
 10-23 [台湾国防部长：中共若封锁台湾将是战争行为](/articles/dw/1023916.md)
@@ -598,6 +600,4 @@
 9-24 [未经许可抛售名牌 阿迪达斯和彪马要状告Shein](/articles/dw/1024212.md)
 
 9-24 [菲律宾称过去7天有251艘中国船只进入其海域](/articles/dw/1024213.md)
-
-9-24 [日童遇襲死亡案：日外相要求北京打擊反日言論](/articles/dw/1024214.md)
 
