--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-23 [新新默存｜艾晓明：看见曾经的我们](/articles/cdt/336157.md)
+
 10-23 [极昼工作室｜一个农村女性先提离婚的N种理由](/articles/cdt/336162.md)
 
 10-23 [常识流通处｜为什么有这么多人共情辛瓦尔？](/articles/cdt/336164.md)
@@ -598,6 +600,4 @@
 9-16 [【CDT报告汇】上海美国商会：会员公司盈利创历史新低，对中国市场预期悲观（外二篇）](/articles/cdt/337091.md)
 
 9-17 [【404媒体】“要是所有的媒体都能够追寻并披露真实的真相，又何需自媒体来写‘故事’ 呢？”(外二篇）](/articles/cdt/337092.md)
-
-9-15 [【异闻观止】国家安全部｜天降桃花运？小心是“桃花劫”](/articles/cdt/337094.md)
 
