--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-24 [德国总理朔尔茨率团访印，期望扩大印度市场降低中国风险](/articles/voa/1011587.md)
+
 10-24 [金正恩视察战略导弹基地，称以“战略威慑”应对美“核威胁”](/articles/voa/1011588.md)
 
 10-23 [印中峰会在中断五年后恢复，两国关系正常化迈出第一步](/articles/voa/1011589.md)
@@ -598,6 +600,4 @@
 10-11 [墨西哥石油公司德州炼油厂泄漏事故致2人死亡，35人受伤](/articles/voa/1011885.md)
 
 10-11 [中国总理李强与日本首相石破茂在东盟峰会期间举行会晤](/articles/voa/1011886.md)
-
-10-11 [美司法部对一名进口中国太阳能电池板却逃避支付高额关税的男子提起诉讼](/articles/voa/1011887.md)
 
