--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-24 [金砖登场，习普三会 分析：中俄合作大于竞争，但非“上不封顶”](/articles/voa/1011584.md)
+
 10-24 [中国“短剧出海”来势汹汹 美加欧澳演员粉墨登场](/articles/voa/1011585.md)
 
 10-24 [香港将再度举办国际金融领袖投资峰会，各国金融领袖关注中国经济局势](/articles/voa/1011586.md)
@@ -598,6 +600,4 @@
 10-11 [欧洲理事会主席称中国必须“调整其行为”以解决贸易争端](/articles/voa/1011882.md)
 
 10-11 [布林肯告诉东盟：美国担忧中国在争议海域的“危险”行动](/articles/voa/1011883.md)
-
-10-11 [上合组织峰会前夕，巴基斯坦发生袭击事件，至少20名矿工死亡](/articles/voa/1011884.md)
 
