--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+10-24 [南非要求台湾代表处迁离首都 美两党议员发声挺台，批南非与中国联手霸凌台湾](/articles/voa/1011576.md)
+
+10-24 [世界媒体看中国：谋求周边平和与不平和](/articles/voa/1011577.md)
+
 10-24 [对于西藏流亡领袖来说，走自治的中间道路仍然是核心重点](/articles/voa/1011578.md)
 
 10-24 [华为设备被发现含有台积电芯片 美国会议员要求解释](/articles/voa/1011579.md)
@@ -596,8 +600,4 @@
 10-12 [石破茂会见李强 日本会改变对华政策吗？](/articles/voa/1011874.md)
 
 10-11 [中国股市三大指数集体下跌，市场关注周六财政部能否放大招](/articles/voa/1011875.md)
-
-10-11 [布林肯警告中国不得对台挑衅，称所有东盟国家希望台海稳定](/articles/voa/1011876.md)
-
-10-11 [对全球拥核国家发出警告：2024年度诺贝尔和平奖授予日本核爆幸存者组织](/articles/voa/1011877.md)
 
