--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-24 [微软：中国、伊朗、俄罗斯在美国选前加强影响力行动](/articles/voa/1011572.md)
+
 10-24 [中国称外国间谍试图窃取太空计划机密](/articles/voa/1011573.md)
 
 10-24 [朝鲜若派兵进入乌克兰意味着什么？联合国能做什么？](/articles/voa/1011574.md)
@@ -598,6 +600,4 @@
 10-12 [欧盟怀疑中国跨境电商平台Temu阻止非法商品出售不力，要求其提供更多资料](/articles/voa/1011870.md)
 
 10-12 [蔡英文卸任后首访欧 宣示价值观外交成果](/articles/voa/1011871.md)
-
-10-12 [黎智英儿子促英外相访问中国时提起案件 指父亲在狱中无法领圣体是“精神折磨”](/articles/voa/1011872.md)
 
