--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-24 [欧盟对华政策将更凸显鹰派](/articles/dw/1023910.md)
+
 10-24 [《喀山宣言》反单边制裁  欧盟批普京滥用金砖](/articles/dw/1023911.md)
 
 10-24 [微軟：中國用網軍干預美選 針對反中候選人](/articles/dw/1023912.md)
@@ -598,6 +600,4 @@
 9-24 [上海：一周内两度遭遇台风登陆](/articles/dw/1024208.md)
 
 9-24 [中国央行降息降准 欲拉动经济增长](/articles/dw/1024209.md)
-
-9-24 [“汽车峰会”后 德经济部长许诺扶持电动车业务](/articles/dw/1024210.md)
 
