--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-24 [中企禾赛再被列入黑名单 拟对美国国防部提诉讼](/articles/voa/1011571.md)
+
 10-24 [微软：中国、伊朗、俄罗斯在美国选前加强影响力行动](/articles/voa/1011572.md)
 
 10-24 [中国称外国间谍试图窃取太空计划机密](/articles/voa/1011573.md)
@@ -598,6 +600,4 @@
 10-12 [美国总统大选愈加扑朔迷离，什么样的“十月惊奇”会搅局选情？](/articles/voa/1011869.md)
 
 10-12 [欧盟怀疑中国跨境电商平台Temu阻止非法商品出售不力，要求其提供更多资料](/articles/voa/1011870.md)
-
-10-12 [蔡英文卸任后首访欧 宣示价值观外交成果](/articles/voa/1011871.md)
 
