--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,18 @@
 美国之音
 ------
 
+10-25 [G7正在敲定向乌克兰提供的500亿美元贷款](/articles/voa/1011551.md)
+
+10-25 [联合国：帮派攻击导致海地上万人流离失所](/articles/voa/1011552.md)
+
+10-25 [2024国会选举：参众两院控制权会否出现大反转？](/articles/voa/1011553.md)
+
+10-25 [乌克兰：朝鲜军队被部署在乌军攻入的俄罗斯库尔斯克地区](/articles/voa/1011554.md)
+
+10-25 [普京在金砖国家会议上警告中东将爆发全面战争](/articles/voa/1011555.md)
+
+10-25 [摩尔多瓦总统称贿赂影响选举，承诺举行决选](/articles/voa/1011556.md)
+
 10-25 [美军和情报机构被要求拥抱人控智能](/articles/voa/1011557.md)
 
 10-25 [美国制裁苏丹武装部队武器采购主管](/articles/voa/1011558.md)
@@ -588,16 +600,4 @@
 10-13 [四通桥事件两周年 海外持续声援，呼吁中共释放彭立发](/articles/voa/1011849.md)
 
 10-13 [以色列轰炸加沙北部，联合国驻黎巴嫩维和部队再次遭到攻击](/articles/voa/1011850.md)
-
-10-13 [北京警告欧盟不要单独与中国车企谈判，否则会动摇双边“谈判基础”](/articles/voa/1011851.md)
-
-10-12 [对赖清德双十演说深感不满，北京威胁对台采取贸易措施](/articles/voa/1011852.md)
-
-10-12 [四通桥周年专访野夫: 中国民间为何反抗事件迭起？](/articles/voa/1011853.md)
-
-10-12 [美欧敦促以色列停止攻击联合维和部队，美对以黎冲突态度似有变化](/articles/voa/1011854.md)
-
-10-12 [中国财长“大招”不过如此，发债化债“稳”为先，股民死活顾不上](/articles/voa/1011855.md)
-
-10-12 [波音公司计划裁员10%，预计第三季度大幅亏损](/articles/voa/1011856.md)
 
