--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-25 [每日一语 2024.10.24](/articles/cdt/336104.md)
+
 10-25 [唐师三百手｜被杨笠脱口秀表演整破防的90后，心中充满仇恨](/articles/cdt/336118.md)
 
 10-25 [萝严肃｜继续支持杨笠，支持女性脱口秀，做出我们的选择](/articles/cdt/336121.md)
@@ -598,6 +600,4 @@
 9-17 [玖奌杂货铺｜他们重新定义了“自愿”](/articles/cdt/337053.md)
 
 9-18 [【异闻观止】成武县公报：体制内8千人发养老金近8亿，居民12万养老金2.5亿](/articles/cdt/337054.md)
-
-9-17 [常识流通处｜肃条与滋润：转移支付下的县城中产生活还能维持多久？](/articles/cdt/337057.md)
 
