--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,13 +3,15 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-25 [【CDT报告汇】布兰切特：习近平的“马克思主义”只想要列宁主义控制，而非共产主义理想（外二篇）](/articles/cdt/336093.md)
+
 10-25 [C计划｜从“抵制杨笠”到《再见爱人》，如何看待愤怒背后的三组理由？](/articles/cdt/336095.md)
 
 10-25 [每日人物｜亏了上百万，终于卖房解套的人](/articles/cdt/336097.md)
 
 10-25 [西坡原创｜他们问，付航凭什么演小人物](/articles/cdt/336100.md)
 
-10-25 [【CDT关注】李翘楚：维权律师许志永狱中绝食20天，体重急降状况危急](/articles/cdt/336101.md)
+10-25 [李翘楚：维权律师许志永狱中绝食20天，体重急降状况危急](/articles/cdt/336101.md)
 
 10-25 [每日一语 2024.10.24](/articles/cdt/336104.md)
 
@@ -598,6 +600,4 @@
 9-18 [一座独立屋｜10万一平的房价，1元一单的外卖](/articles/cdt/337038.md)
 
 9-17 [每日一语 2024.9.17](/articles/cdt/337043.md)
-
-9-17 [人我场｜媒体人曝光“安徽访民被网上追逃”，遭政府人员威胁“移交公安”](/articles/cdt/337048.md)
 
