--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-25 [赖清德再赴金门：“台澎金马寸土不让”](/articles/dw/1023900.md)
+
 10-25 [北韓派兵進入俄羅斯 中國不滿卻難以阻止？](/articles/dw/1023901.md)
 
 10-24 [专访:俄乌战争凸显欧洲无能化解自身的危机](/articles/dw/1023902.md)
@@ -598,6 +600,4 @@
 9-26 [日媒：海上自衛隊船艦首度通過台灣海峽](/articles/dw/1024198.md)
 
 9-25 [越共领导人苏林将会拜登：在美中之间平衡](/articles/dw/1024199.md)
-
-9-25 [黎巴嫩局势激化：以色列想要实现什么目标？](/articles/dw/1024200.md)
 
