--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-26 [旧闻评论｜金星撞广州｜舆论手札](/articles/cdt/336082.md)
+
+10-26 [劳务宏观笔记｜回不去的故乡，三季度外出农民工首次超过1.9亿](/articles/cdt/336084.md)
+
+10-26 [卖杏花｜教沙白白做人？](/articles/cdt/336085.md)
+
 10-25 [【CDT报告汇】布兰切特：习近平的“马克思主义”只想要列宁主义控制，而非共产主义理想（外二篇）](/articles/cdt/336093.md)
 
 10-25 [C计划｜从“抵制杨笠”到《再见爱人》，如何看待愤怒背后的三组理由？](/articles/cdt/336095.md)
@@ -594,10 +600,4 @@
 9-19 [常识流通处｜山东成武县一则“发展统计公报”火了：终于理解为何都往体制里钻](/articles/cdt/337028.md)
 
 9-18 [【404文库】独角鲸工作坊｜“日本小学生”遇袭，含糊其辞只能让事情变糟](/articles/cdt/337030.md)
-
-9-18 [【旧文重温】网易真话｜袁凌：宋彬彬身后的人们](/articles/cdt/337032.md)
-
-9-18 [一座独立屋｜10万一平的房价，1元一单的外卖](/articles/cdt/337038.md)
-
-9-17 [每日一语 2024.9.17](/articles/cdt/337043.md)
 
