--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+10-26 [马斯克与普京的定期接触引发了美国国家安全的担忧](/articles/voa/1011519.md)
+
 10-26 [中国斥赖清德不纪念“光复节”意图建构台独史观，学者：台湾主权未定有自己多元史观](/articles/voa/1011520.md)
 
 10-26 [以色列空袭伊朗以报复10月初的导弹袭击 中东战争升级风险扩大](/articles/voa/1011521.md)
@@ -598,6 +600,4 @@
 10-14 [中国工人在巴基斯坦多次遇袭后，李强抵巴参加上合组织会议讨论安全及经济](/articles/voa/1011817.md)
 
 10-14 [声称“惩戒”台独顽固分子，北京宣布制裁台商曹兴诚、立委沈伯洋和“黑熊学院”](/articles/voa/1011818.md)
-
-10-14 [中国看守所再传人满为患 分析:中共维稳优先，开启“泛罪化”时代](/articles/voa/1011819.md)
 
