--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+10-26 [美国批准对台湾近20亿美元军售](/articles/dw/1023887.md)
+
+10-26 [看向矽谷的AI之島？台灣半導體繁榮背後的貧與富](/articles/dw/1023888.md)
+
 10-26 [以色列：已完成对伊朗的报复性打击](/articles/dw/1023889.md)
 
 10-26 [跨越台海的同婚之路：我們的關係非兩岸縮影](/articles/dw/1023890.md)
@@ -596,8 +600,4 @@
 9-27 [自民黨新總裁上任后 日本對華政策會如何變化？](/articles/dw/1024185.md)
 
 9-27 [中国刺激经济措施：太迟太少？](/articles/dw/1024186.md)
-
-9-27 [访问白宫后 泽连斯基将会特朗普](/articles/dw/1024187.md)
-
-9-27 [泰國賭博合法化在即？巨型賭場計劃浮現](/articles/dw/1024188.md)
 
