--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+10-26 [以色列：完成对伊朗报复性打击  伊朗：准备应对以色列“侵略“](/articles/dw/1023886.md)
+
 10-26 [美国批准对台湾近20亿美元军售](/articles/dw/1023887.md)
 
 10-26 [看向矽谷的AI之島？台灣半導體繁榮背後的貧與富](/articles/dw/1023888.md)
@@ -598,6 +600,4 @@
 9-27 [专访：新政下不见“大牛” 不如关门大吉](/articles/dw/1024184.md)
 
 9-27 [自民黨新總裁上任后 日本對華政策會如何變化？](/articles/dw/1024185.md)
-
-9-27 [中国刺激经济措施：太迟太少？](/articles/dw/1024186.md)
 
