--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+10-26 [倪刃｜一个叫沙白的女孩儿决定去安乐死](/articles/cdt/336068.md)
+
+10-26 [【网络民议】知乎问答｜为什么恨国党觉得出去就能活得比中国更好呢？](/articles/cdt/336071.md)
+
 10-26 [猛犸工作室｜高位买房的人，选择与自己和解](/articles/cdt/336077.md)
 
 10-26 [每日一语 2024.10.25](/articles/cdt/336080.md)
@@ -596,8 +600,4 @@
 9-19 [【404文库】深圳客｜想给那个日本孩子说声对不起！](/articles/cdt/337021.md)
 
 9-19 [每日一语 2024.9.18](/articles/cdt/337023.md)
-
-9-19 [【404文库】城市的地得｜我依然为那个日本男孩感到悲伤](/articles/cdt/337025.md)
-
-9-19 [昊轩洞见｜深圳日本人学校小学生遇袭，让我想到胡友平](/articles/cdt/337026.md)
 
